commit bilingual contents

--- a/docs/visual-basic/misc/bc30067.md
+++ b/docs/visual-basic/misc/bc30067.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30067
 ms.assetid: 207fef65-4383-4120-9e5a-e0e14d168a72
-ms.openlocfilehash: 68594bb4c09bfb161619821b8c7e9268ab28f43b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6e1a658e98423cc01622848c31342307e2f77286
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622230"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381264"
 ---
-# <a name="exit-function-is-not-valid-in-a-sub-or-property"></a><span data-ttu-id="09c5b-102">'Exit Function' non è valido in Sub o Property</span><span class="sxs-lookup"><span data-stu-id="09c5b-102">'Exit Function' is not valid in a Sub or Property</span></span>
-<span data-ttu-id="09c5b-103">`Exit Function` viene visualizzato in una routine `Sub` o `Property` .</span><span class="sxs-lookup"><span data-stu-id="09c5b-103">`Exit Function` appears in a `Sub` procedure or a `Property` procedure.</span></span> <span data-ttu-id="09c5b-104">Un'istruzione `Exit` deve corrispondere al blocco in cui è inclusa.</span><span class="sxs-lookup"><span data-stu-id="09c5b-104">An `Exit` statement must match the block in which it occurs.</span></span>  
+# <a name="exit-function-is-not-valid-in-a-sub-or-property"></a><span data-ttu-id="53414-102">'Exit Function' non è valido in Sub o Property</span><span class="sxs-lookup"><span data-stu-id="53414-102">'Exit Function' is not valid in a Sub or Property</span></span>
+<span data-ttu-id="53414-103">`Exit Function` viene visualizzato in una routine `Sub` o `Property` .</span><span class="sxs-lookup"><span data-stu-id="53414-103">`Exit Function` appears in a `Sub` procedure or a `Property` procedure.</span></span> <span data-ttu-id="53414-104">Un'istruzione `Exit` deve corrispondere al blocco in cui è inclusa.</span><span class="sxs-lookup"><span data-stu-id="53414-104">An `Exit` statement must match the block in which it occurs.</span></span>  
   
- <span data-ttu-id="09c5b-105">**ID errore:** BC30067</span><span class="sxs-lookup"><span data-stu-id="09c5b-105">**Error ID:** BC30067</span></span>  
+ <span data-ttu-id="53414-105">**ID errore:** BC30067</span><span class="sxs-lookup"><span data-stu-id="53414-105">**Error ID:** BC30067</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="09c5b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="09c5b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="53414-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="53414-106">To correct this error</span></span>  
   
-- <span data-ttu-id="09c5b-107">Sostituire `Exit Function` con l'istruzione `Exit Sub` o `Exit Property` in base alle necessità.</span><span class="sxs-lookup"><span data-stu-id="09c5b-107">Replace the `Exit Function` with the `Exit Sub` or `Exit Property` statement as appropriate.</span></span>  
+- <span data-ttu-id="53414-107">Sostituire `Exit Function` con l'istruzione `Exit Sub` o `Exit Property` in base alle necessità.</span><span class="sxs-lookup"><span data-stu-id="53414-107">Replace the `Exit Function` with the `Exit Sub` or `Exit Property` statement as appropriate.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="09c5b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="09c5b-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="53414-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="53414-108">See also</span></span>
 
-- [<span data-ttu-id="09c5b-109">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="09c5b-109">Sub Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [<span data-ttu-id="09c5b-110">Routine Function</span><span class="sxs-lookup"><span data-stu-id="09c5b-110">Function Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [<span data-ttu-id="09c5b-111">Routine Property</span><span class="sxs-lookup"><span data-stu-id="09c5b-111">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="53414-109">Routine Sub</span><span class="sxs-lookup"><span data-stu-id="53414-109">Sub Procedures</span></span>](../programming-guide/language-features/procedures/sub-procedures.md)
+- [<span data-ttu-id="53414-110">Routine Function</span><span class="sxs-lookup"><span data-stu-id="53414-110">Function Procedures</span></span>](../programming-guide/language-features/procedures/function-procedures.md)
+- [<span data-ttu-id="53414-111">Routine Property</span><span class="sxs-lookup"><span data-stu-id="53414-111">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
