--- a/docs/visual-basic/misc/bc30072.md
+++ b/docs/visual-basic/misc/bc30072.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30072
 ms.assetid: da808bc3-f154-444a-b547-3cf55beff8a9
-ms.openlocfilehash: 2dd126214ec6091591cb26de6168643fe7f32489
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 692804b2236e1de84703dbf6b490a765249ba073
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622202"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381134"
 ---
-# <a name="case-can-only-appear-inside-a-select-case-statement"></a><span data-ttu-id="66e9c-102">'Case' può trovarsi solo all'interno di un'istruzione 'Select Case'</span><span class="sxs-lookup"><span data-stu-id="66e9c-102">'Case' can only appear inside a 'Select Case' statement</span></span>
-<span data-ttu-id="66e9c-103">Un'istruzione `Case` si verifica al di fuori di un blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="66e9c-103">A `Case` statement occurs outside a `Select` block.</span></span> <span data-ttu-id="66e9c-104">Un'istruzione `Case` può essere usata solo tra un'istruzione `Select` o `Select Case` e l'istruzione `End Select` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="66e9c-104">A `Case` statement can be used only between a `Select` or `Select Case` statement and its corresponding `End Select` statement.</span></span>  
+# <a name="case-can-only-appear-inside-a-select-case-statement"></a><span data-ttu-id="ea0a5-102">'Case' può trovarsi solo all'interno di un'istruzione 'Select Case'</span><span class="sxs-lookup"><span data-stu-id="ea0a5-102">'Case' can only appear inside a 'Select Case' statement</span></span>
+<span data-ttu-id="ea0a5-103">Un'istruzione `Case` si verifica al di fuori di un blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="ea0a5-103">A `Case` statement occurs outside a `Select` block.</span></span> <span data-ttu-id="ea0a5-104">Un'istruzione `Case` può essere usata solo tra un'istruzione `Select` o `Select Case` e l'istruzione `End Select` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="ea0a5-104">A `Case` statement can be used only between a `Select` or `Select Case` statement and its corresponding `End Select` statement.</span></span>  
   
- <span data-ttu-id="66e9c-105">**ID errore:** BC30072</span><span class="sxs-lookup"><span data-stu-id="66e9c-105">**Error ID:** BC30072</span></span>  
+ <span data-ttu-id="ea0a5-105">**ID errore:** BC30072</span><span class="sxs-lookup"><span data-stu-id="ea0a5-105">**Error ID:** BC30072</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="66e9c-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="66e9c-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ea0a5-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ea0a5-106">To correct this error</span></span>  
   
-- <span data-ttu-id="66e9c-107">Rimuovere l'istruzione `Case` o spostarla all'interno di un blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="66e9c-107">Remove the `Case` statement or move it to within a `Select` block.</span></span>  
+- <span data-ttu-id="ea0a5-107">Rimuovere l'istruzione `Case` o spostarla all'interno di un blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="ea0a5-107">Remove the `Case` statement or move it to within a `Select` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="66e9c-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="66e9c-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ea0a5-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ea0a5-108">See also</span></span>
 
-- [<span data-ttu-id="66e9c-109">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="66e9c-109">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [<span data-ttu-id="ea0a5-109">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="ea0a5-109">Select...Case Statement</span></span>](../language-reference/statements/select-case-statement.md)
