--- a/docs/visual-basic/misc/bc30088.md
+++ b/docs/visual-basic/misc/bc30088.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30088
 ms.assetid: 9de8c0d4-4ce9-45cf-98d6-8f68bba507a5
-ms.openlocfilehash: 6e0a7dbafcc4362c89d037bf1208ff251e555daf
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 1a6574a88755e54841549d28ec88912e589c866e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935902"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380484"
 ---
-# <a name="end-select-must-be-preceded-by-a-matching-select-case"></a><span data-ttu-id="fe8b9-102">'End Select' deve essere preceduto da un 'Select Case' corrispondente</span><span class="sxs-lookup"><span data-stu-id="fe8b9-102">'End Select' must be preceded by a matching 'Select Case'</span></span>
-<span data-ttu-id="fe8b9-103">Un'istruzione `End Select` si verifica senza un'istruzione `Select` o `Select Case` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="fe8b9-103">An `End Select` statement occurs without a corresponding `Select` or `Select Case` statement.</span></span> <span data-ttu-id="fe8b9-104">`End Select` deve essere preceduto da un'istruzione `Select` o `Select Case` .</span><span class="sxs-lookup"><span data-stu-id="fe8b9-104">`End Select` must be preceded by a `Select` or `Select Case` statement.</span></span>  
+# <a name="end-select-must-be-preceded-by-a-matching-select-case"></a><span data-ttu-id="a240b-102">'End Select' deve essere preceduto da un 'Select Case' corrispondente</span><span class="sxs-lookup"><span data-stu-id="a240b-102">'End Select' must be preceded by a matching 'Select Case'</span></span>
+<span data-ttu-id="a240b-103">Un'istruzione `End Select` si verifica senza un'istruzione `Select` o `Select Case` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="a240b-103">An `End Select` statement occurs without a corresponding `Select` or `Select Case` statement.</span></span> <span data-ttu-id="a240b-104">`End Select` deve essere preceduto da un'istruzione `Select` o `Select Case` .</span><span class="sxs-lookup"><span data-stu-id="a240b-104">`End Select` must be preceded by a `Select` or `Select Case` statement.</span></span>  
   
- <span data-ttu-id="fe8b9-105">**ID errore:** BC30088</span><span class="sxs-lookup"><span data-stu-id="fe8b9-105">**Error ID:** BC30088</span></span>  
+ <span data-ttu-id="a240b-105">**ID errore:** BC30088</span><span class="sxs-lookup"><span data-stu-id="a240b-105">**Error ID:** BC30088</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fe8b9-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fe8b9-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a240b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a240b-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="fe8b9-107">Se questo blocco `Select` fa parte di un set di blocchi `Select` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="fe8b9-107">If this `Select` block is part of a set of nested `Select` blocks, make sure each block is properly terminated.</span></span>  
+1. <span data-ttu-id="a240b-107">Se questo blocco `Select` fa parte di un set di blocchi `Select` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="a240b-107">If this `Select` block is part of a set of nested `Select` blocks, make sure each block is properly terminated.</span></span>  
   
-2. <span data-ttu-id="fe8b9-108">Verificare che le altre strutture di controllo all'interno del blocco `Select` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="fe8b9-108">Verify that other control structures within the `Select` block are correctly terminated.</span></span>  
+2. <span data-ttu-id="a240b-108">Verificare che le altre strutture di controllo all'interno del blocco `Select` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="a240b-108">Verify that other control structures within the `Select` block are correctly terminated.</span></span>  
   
-3. <span data-ttu-id="fe8b9-109">Verificare che il blocco `Select` sia formattato correttamente.</span><span class="sxs-lookup"><span data-stu-id="fe8b9-109">Check that this `Select` block is correctly formatted.</span></span>  
+3. <span data-ttu-id="a240b-109">Verificare che il blocco `Select` sia formattato correttamente.</span><span class="sxs-lookup"><span data-stu-id="a240b-109">Check that this `Select` block is correctly formatted.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="fe8b9-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fe8b9-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a240b-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a240b-110">See also</span></span>
 
-- [<span data-ttu-id="fe8b9-111">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="fe8b9-111">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [<span data-ttu-id="a240b-111">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="a240b-111">Select...Case Statement</span></span>](../language-reference/statements/select-case-statement.md)
