--- a/docs/visual-basic/misc/bc32203.md
+++ b/docs/visual-basic/misc/bc32203.md
@@ -1,5 +1,5 @@
 ---
-title: "'<method1>' non può eseguire<method2>l'override di '' perché espande l'accesso del metodo di base"
+title: "' <method1> ' non può eseguire l'override <method2> di '' perché espande l'accesso del metodo di base"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32203
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC32203
 ms.assetid: ef7816a4-5f57-4346-80fc-9311bc150b6b
-ms.openlocfilehash: bae7df1b56fe28e8bb1b3b70ed176eed4e8381da
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: f2297b8cda149400df2dc69f207aaa74820cf4d5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667487"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379705"
 ---
-# <a name="method1-cannot-override-method2-because-it-expands-the-access-of-the-base-method"></a><span data-ttu-id="71222-102">'\<Method1 >' non può eseguire\<l'override di ' Method2 >' perché espande l'accesso del metodo di base</span><span class="sxs-lookup"><span data-stu-id="71222-102">'\<method1>' cannot override '\<method2>' because it expands the access of the base method</span></span>
-<span data-ttu-id="71222-103">Una routine specifica `Overrides` , ma dichiara un'accessibilità meno restrittiva di quella del metodo da sottoporre a override.</span><span class="sxs-lookup"><span data-stu-id="71222-103">A procedure specifies `Overrides` but declares an accessibility less restrictive than that of the method to be overridden.</span></span> <span data-ttu-id="71222-104">Non è possibile espandere l'accessibilità, in altre parole non è possibile rendere il metodo di override più accessibile rispetto al metodo sottoposto a override.</span><span class="sxs-lookup"><span data-stu-id="71222-104">You cannot expand the accessibility, meaning you cannot make the overriding method more accessible than the method it overrides.</span></span> <span data-ttu-id="71222-105">Ad esempio, se il metodo della classe base è `Protected`, è possibile eseguirne l'override con un metodo `Public` .</span><span class="sxs-lookup"><span data-stu-id="71222-105">For example, if the base class method is `Protected`, you cannot override it with a `Public` method.</span></span>  
+# <a name="method1-cannot-override-method2-because-it-expands-the-access-of-the-base-method"></a><span data-ttu-id="9c74f-102">' \<method1> ' non può eseguire l'override \<method2> di '' perché espande l'accesso del metodo di base</span><span class="sxs-lookup"><span data-stu-id="9c74f-102">'\<method1>' cannot override '\<method2>' because it expands the access of the base method</span></span>
+<span data-ttu-id="9c74f-103">Una routine specifica `Overrides` , ma dichiara un'accessibilità meno restrittiva di quella del metodo da sottoporre a override.</span><span class="sxs-lookup"><span data-stu-id="9c74f-103">A procedure specifies `Overrides` but declares an accessibility less restrictive than that of the method to be overridden.</span></span> <span data-ttu-id="9c74f-104">Non è possibile espandere l'accessibilità, in altre parole non è possibile rendere il metodo di override più accessibile rispetto al metodo sottoposto a override.</span><span class="sxs-lookup"><span data-stu-id="9c74f-104">You cannot expand the accessibility, meaning you cannot make the overriding method more accessible than the method it overrides.</span></span> <span data-ttu-id="9c74f-105">Ad esempio, se il metodo della classe base è `Protected`, è possibile eseguirne l'override con un metodo `Public` .</span><span class="sxs-lookup"><span data-stu-id="9c74f-105">For example, if the base class method is `Protected`, you cannot override it with a `Public` method.</span></span>  
   
- <span data-ttu-id="71222-106">**ID errore:** BC32203</span><span class="sxs-lookup"><span data-stu-id="71222-106">**Error ID:** BC32203</span></span>  
+ <span data-ttu-id="9c74f-106">**ID errore:** BC32203</span><span class="sxs-lookup"><span data-stu-id="9c74f-106">**Error ID:** BC32203</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="71222-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="71222-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9c74f-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9c74f-107">To correct this error</span></span>  
   
-- <span data-ttu-id="71222-108">Rimuovere la parola chiave `Overrides` o modificare l'accessibilità in modo che sia restrittiva almeno quanto quella del metodo della classe base.</span><span class="sxs-lookup"><span data-stu-id="71222-108">Remove the `Overrides` keyword, or change the accessibility to be at least as restrictive as that of the base class method.</span></span>  
+- <span data-ttu-id="9c74f-108">Rimuovere la parola chiave `Overrides` o modificare l'accessibilità in modo che sia restrittiva almeno quanto quella del metodo della classe base.</span><span class="sxs-lookup"><span data-stu-id="9c74f-108">Remove the `Overrides` keyword, or change the accessibility to be at least as restrictive as that of the base class method.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="71222-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="71222-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9c74f-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9c74f-109">See also</span></span>
 
-- [<span data-ttu-id="71222-110">Override di proprietà e metodi nelle classi derivate</span><span class="sxs-lookup"><span data-stu-id="71222-110">Overriding properties and methods in derived classes</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
-- [<span data-ttu-id="71222-111">Livelli di accesso in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="71222-111">Access levels in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md)
-- [<span data-ttu-id="71222-112">Shadowing in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="71222-112">Shadowing in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
+- [<span data-ttu-id="9c74f-110">Override di proprietà e metodi nelle classi derivate</span><span class="sxs-lookup"><span data-stu-id="9c74f-110">Overriding properties and methods in derived classes</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+- [<span data-ttu-id="9c74f-111">Livelli di accesso in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="9c74f-111">Access levels in Visual Basic</span></span>](../programming-guide/language-features/declared-elements/access-levels.md)
+- [<span data-ttu-id="9c74f-112">Shadowing in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="9c74f-112">Shadowing in Visual Basic</span></span>](../programming-guide/language-features/declared-elements/shadowing.md)
