--- a/docs/visual-basic/misc/bc36558.md
+++ b/docs/visual-basic/misc/bc36558.md
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC36558
 ms.assetid: f47d310a-95fd-4340-bda2-21262c217dbb
-ms.openlocfilehash: 6c9227a876d95b68cf9f86327285cb7770ae9063
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: adc7bd9f0d773c996a892371b7c2f69014e0622b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69666877"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378354"
 ---
-# <a name="the-custom-designed-version-of-systemruntimecompilerservicesextensionattribute-found-by-the-compiler-is-not-valid"></a><span data-ttu-id="4c0ed-102">La versione personalizzata di 'System.Runtime.CompilerServices.ExtensionAttribute' trovata dal compilatore non è valida</span><span class="sxs-lookup"><span data-stu-id="4c0ed-102">The custom-designed version of 'System.Runtime.CompilerServices.ExtensionAttribute' found by the compiler is not valid</span></span>
+# <a name="the-custom-designed-version-of-systemruntimecompilerservicesextensionattribute-found-by-the-compiler-is-not-valid"></a><span data-ttu-id="c4d8c-102">La versione personalizzata di 'System.Runtime.CompilerServices.ExtensionAttribute' trovata dal compilatore non è valida</span><span class="sxs-lookup"><span data-stu-id="c4d8c-102">The custom-designed version of 'System.Runtime.CompilerServices.ExtensionAttribute' found by the compiler is not valid</span></span>
 
-<span data-ttu-id="4c0ed-103">La versione personalizzata di 'System.Runtime.CompilerServices.ExtensionAttribute' trovata dal compilatore non è valida.</span><span class="sxs-lookup"><span data-stu-id="4c0ed-103">The custom-designed version of 'System.Runtime.CompilerServices.ExtensionAttribute' found by the compiler is not valid.</span></span> <span data-ttu-id="4c0ed-104">I flag di utilizzo degli attributi devono essere impostati per consentire assembly, classi e metodi.</span><span class="sxs-lookup"><span data-stu-id="4c0ed-104">Its attribute usage flags must be set to allow assemblies, classes, and methods.</span></span>
+<span data-ttu-id="c4d8c-103">La versione personalizzata di 'System.Runtime.CompilerServices.ExtensionAttribute' trovata dal compilatore non è valida.</span><span class="sxs-lookup"><span data-stu-id="c4d8c-103">The custom-designed version of 'System.Runtime.CompilerServices.ExtensionAttribute' found by the compiler is not valid.</span></span> <span data-ttu-id="c4d8c-104">I flag di utilizzo degli attributi devono essere impostati per consentire assembly, classi e metodi.</span><span class="sxs-lookup"><span data-stu-id="c4d8c-104">Its attribute usage flags must be set to allow assemblies, classes, and methods.</span></span>
 
-<span data-ttu-id="4c0ed-105">La versione personalizzata di <xref:System.Runtime.CompilerServices.ExtensionAttribute?displayProperty=nameWithType> trovata dal compilatore non imposta i relativi flag di utilizzo degli attributi per consentire l'applicazione dell'attributo ad assembly, metodi e classi.</span><span class="sxs-lookup"><span data-stu-id="4c0ed-105">The custom-designed version of <xref:System.Runtime.CompilerServices.ExtensionAttribute?displayProperty=nameWithType> that the compiler found does not set its attribute usage flags to enable application of the attribute to assemblies, methods, and classes.</span></span> <span data-ttu-id="4c0ed-106">È necessaria l'applicazione ad almeno questi tre elementi di programma.</span><span class="sxs-lookup"><span data-stu-id="4c0ed-106">Application to at least those three program elements is required.</span></span>
+<span data-ttu-id="c4d8c-105">La versione personalizzata di <xref:System.Runtime.CompilerServices.ExtensionAttribute?displayProperty=nameWithType> trovata dal compilatore non imposta i relativi flag di utilizzo degli attributi per consentire l'applicazione dell'attributo ad assembly, metodi e classi.</span><span class="sxs-lookup"><span data-stu-id="c4d8c-105">The custom-designed version of <xref:System.Runtime.CompilerServices.ExtensionAttribute?displayProperty=nameWithType> that the compiler found does not set its attribute usage flags to enable application of the attribute to assemblies, methods, and classes.</span></span> <span data-ttu-id="c4d8c-106">È necessaria l'applicazione ad almeno questi tre elementi di programma.</span><span class="sxs-lookup"><span data-stu-id="c4d8c-106">Application to at least those three program elements is required.</span></span>
 
-<span data-ttu-id="4c0ed-107">**ID errore:** BC36558</span><span class="sxs-lookup"><span data-stu-id="4c0ed-107">**Error ID:** BC36558</span></span>
+<span data-ttu-id="c4d8c-107">**ID errore:** BC36558</span><span class="sxs-lookup"><span data-stu-id="c4d8c-107">**Error ID:** BC36558</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="4c0ed-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4c0ed-108">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="c4d8c-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c4d8c-108">To correct this error</span></span>
 
-- <span data-ttu-id="4c0ed-109">Modificare la definizione dell'attributo per attivare l'applicazione dell'attributo almeno ad assembly, metodi e classi, come illustrato negli esempi seguenti.</span><span class="sxs-lookup"><span data-stu-id="4c0ed-109">Change the attribute definition to enable the attribute to apply at least to assemblies, methods, and classes, as shown in the following examples.</span></span>
+- <span data-ttu-id="c4d8c-109">Modificare la definizione dell'attributo per attivare l'applicazione dell'attributo almeno ad assembly, metodi e classi, come illustrato negli esempi seguenti.</span><span class="sxs-lookup"><span data-stu-id="c4d8c-109">Change the attribute definition to enable the attribute to apply at least to assemblies, methods, and classes, as shown in the following examples.</span></span>
 
-- <span data-ttu-id="4c0ed-110">Usare <xref:System.Runtime.CompilerServices.ExtensionAttribute?displayProperty=nameWithType> anziché la versione personalizzata.</span><span class="sxs-lookup"><span data-stu-id="4c0ed-110">Use <xref:System.Runtime.CompilerServices.ExtensionAttribute?displayProperty=nameWithType> instead of the custom-designed version.</span></span>
+- <span data-ttu-id="c4d8c-110">Usare <xref:System.Runtime.CompilerServices.ExtensionAttribute?displayProperty=nameWithType> anziché la versione personalizzata.</span><span class="sxs-lookup"><span data-stu-id="c4d8c-110">Use <xref:System.Runtime.CompilerServices.ExtensionAttribute?displayProperty=nameWithType> instead of the custom-designed version.</span></span>
 
-## <a name="example"></a><span data-ttu-id="4c0ed-111">Esempio</span><span class="sxs-lookup"><span data-stu-id="4c0ed-111">Example</span></span>
+## <a name="example"></a><span data-ttu-id="c4d8c-111">Esempio</span><span class="sxs-lookup"><span data-stu-id="c4d8c-111">Example</span></span>
 
-<span data-ttu-id="4c0ed-112">L'esempio seguente usa l'attributo `AttributeUsage` per specificare a quali elementi del programma è possibile applicare la nuova versione di `ExtensionAttribute` .</span><span class="sxs-lookup"><span data-stu-id="4c0ed-112">The following example uses the `AttributeUsage` attribute to specify which program elements the new version of `ExtensionAttribute` can apply to.</span></span> <span data-ttu-id="4c0ed-113">L'esempio specifica tre membri dell'enumerazione `AttributeTargets` : `Assembly`, `Class`e `Method`.</span><span class="sxs-lookup"><span data-stu-id="4c0ed-113">The example specifies three members of the `AttributeTargets` enumeration: `Assembly`, `Class`, and `Method`.</span></span> <span data-ttu-id="4c0ed-114">L'omissione di uno di questi elementi causerà questo errore.</span><span class="sxs-lookup"><span data-stu-id="4c0ed-114">The omission of any one of these elements will cause this error.</span></span>
+<span data-ttu-id="c4d8c-112">L'esempio seguente usa l'attributo `AttributeUsage` per specificare a quali elementi del programma è possibile applicare la nuova versione di `ExtensionAttribute` .</span><span class="sxs-lookup"><span data-stu-id="c4d8c-112">The following example uses the `AttributeUsage` attribute to specify which program elements the new version of `ExtensionAttribute` can apply to.</span></span> <span data-ttu-id="c4d8c-113">L'esempio specifica tre membri dell'enumerazione `AttributeTargets` : `Assembly`, `Class`e `Method`.</span><span class="sxs-lookup"><span data-stu-id="c4d8c-113">The example specifies three members of the `AttributeTargets` enumeration: `Assembly`, `Class`, and `Method`.</span></span> <span data-ttu-id="c4d8c-114">L'omissione di uno di questi elementi causerà questo errore.</span><span class="sxs-lookup"><span data-stu-id="c4d8c-114">The omission of any one of these elements will cause this error.</span></span>
 
 ```vb
 Namespace System.Runtime.CompilerServices
@@ -43,13 +43,13 @@ Namespace System.Runtime.CompilerServices
 End Namespace
 ```
 
-<span data-ttu-id="4c0ed-115">In alternativa, è possibile consentire l'applicazione di `ExtensionAttribute` a tutti gli elementi del programma usando il membro `All` di `AttributeTargets`.</span><span class="sxs-lookup"><span data-stu-id="4c0ed-115">Alternatively, you could allow `ExtensionAttribute` to apply to all program elements by using the `All` member of `AttributeTargets`.</span></span>
+<span data-ttu-id="c4d8c-115">In alternativa, è possibile consentire l'applicazione di `ExtensionAttribute` a tutti gli elementi del programma usando il membro `All` di `AttributeTargets`.</span><span class="sxs-lookup"><span data-stu-id="c4d8c-115">Alternatively, you could allow `ExtensionAttribute` to apply to all program elements by using the `All` member of `AttributeTargets`.</span></span>
 
 ```xml
 <AttributeUsage(AttributeTargets.All)>
 ```
 
-<span data-ttu-id="4c0ed-116">L'eliminazione della riga `AttributeUsage` , come illustrato nel codice seguente, produce lo stesso risultato.</span><span class="sxs-lookup"><span data-stu-id="4c0ed-116">Deleting the `AttributeUsage` line, as shown in the following code, produces the same result.</span></span>
+<span data-ttu-id="c4d8c-116">L'eliminazione della riga `AttributeUsage` , come illustrato nel codice seguente, produce lo stesso risultato.</span><span class="sxs-lookup"><span data-stu-id="c4d8c-116">Deleting the `AttributeUsage` line, as shown in the following code, produces the same result.</span></span>
 
 ```vb
 Namespace System.Runtime.CompilerServices
@@ -60,11 +60,11 @@ Namespace System.Runtime.CompilerServices
 End Namespace
 ```
 
-## <a name="see-also"></a><span data-ttu-id="4c0ed-117">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4c0ed-117">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c4d8c-117">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c4d8c-117">See also</span></span>
 
 - <xref:System.Runtime.CompilerServices.ExtensionAttribute>
 
-- [<span data-ttu-id="4c0ed-118">Creazione di attributi personalizzati</span><span class="sxs-lookup"><span data-stu-id="4c0ed-118">Creating custom attributes</span></span>](../programming-guide/concepts/attributes/creating-custom-attributes.md)
-- [<span data-ttu-id="4c0ed-119">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="4c0ed-119">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="4c0ed-120">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="4c0ed-120">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
-- [<span data-ttu-id="4c0ed-121">Scrittura di attributi personalizzati</span><span class="sxs-lookup"><span data-stu-id="4c0ed-121">Writing Custom Attributes</span></span>](../../standard/attributes/writing-custom-attributes.md)
+- [<span data-ttu-id="c4d8c-118">Creazione di attributi personalizzati</span><span class="sxs-lookup"><span data-stu-id="c4d8c-118">Creating custom attributes</span></span>](../programming-guide/concepts/attributes/creating-custom-attributes.md)
+- [<span data-ttu-id="c4d8c-119">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="c4d8c-119">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="c4d8c-120">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="c4d8c-120">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
+- [<span data-ttu-id="c4d8c-121">Scrittura di attributi personalizzati</span><span class="sxs-lookup"><span data-stu-id="c4d8c-121">Writing Custom Attributes</span></span>](../../standard/attributes/writing-custom-attributes.md)
