--- a/docs/visual-basic/misc/bc30039.md
+++ b/docs/visual-basic/misc/bc30039.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30039
 ms.assetid: 63846449-b1df-4626-bf99-36fa9b187799
-ms.openlocfilehash: 16e920baa74b9eb0bba9e9fd46bbaca133aba555
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d7e0b4f7cc25971de462c335ab88e0a46b74ed40
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64606317"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381913"
 ---
-# <a name="loop-control-variable-cannot-be-a-property-or-a-late-bound-indexed-array"></a><span data-ttu-id="29c3a-102">La variabile di controllo del ciclo non può essere una proprietà o una matrice indicizzata per cui è prevista l'associazione tardiva</span><span class="sxs-lookup"><span data-stu-id="29c3a-102">Loop control variable cannot be a property or a late-bound indexed array</span></span>
-<span data-ttu-id="29c3a-103">La variabile usata per eseguire l'iterazione in un ciclo `For` deve essere di un tipo di dati numerico.</span><span class="sxs-lookup"><span data-stu-id="29c3a-103">The variable used to iterate through a `For` loop must be of a numeric data type.</span></span>  
+# <a name="loop-control-variable-cannot-be-a-property-or-a-late-bound-indexed-array"></a><span data-ttu-id="a0d8b-102">La variabile di controllo del ciclo non può essere una proprietà o una matrice indicizzata per cui è prevista l'associazione tardiva</span><span class="sxs-lookup"><span data-stu-id="a0d8b-102">Loop control variable cannot be a property or a late-bound indexed array</span></span>
+<span data-ttu-id="a0d8b-103">La variabile usata per eseguire l'iterazione in un ciclo `For` deve essere di un tipo di dati numerico.</span><span class="sxs-lookup"><span data-stu-id="a0d8b-103">The variable used to iterate through a `For` loop must be of a numeric data type.</span></span>  
   
- <span data-ttu-id="29c3a-104">**ID errore:** BC30039</span><span class="sxs-lookup"><span data-stu-id="29c3a-104">**Error ID:** BC30039</span></span>  
+ <span data-ttu-id="a0d8b-104">**ID errore:** BC30039</span><span class="sxs-lookup"><span data-stu-id="a0d8b-104">**Error ID:** BC30039</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="29c3a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="29c3a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a0d8b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a0d8b-105">To correct this error</span></span>  
   
-- <span data-ttu-id="29c3a-106">Modificare la dichiarazione della variabile di controllo del ciclo in modo da specificare `Integer`, `Short`, `Long`, `Byte`, `Single`, `Double`o `Decimal`.</span><span class="sxs-lookup"><span data-stu-id="29c3a-106">Change the declaration of the loop control variable to specify `Integer`, `Short`, `Long`, `Byte`, `Single`, `Double`, or `Decimal`.</span></span>  
+- <span data-ttu-id="a0d8b-106">Modificare la dichiarazione della variabile di controllo del ciclo in modo da specificare `Integer`, `Short`, `Long`, `Byte`, `Single`, `Double`o `Decimal`.</span><span class="sxs-lookup"><span data-stu-id="a0d8b-106">Change the declaration of the loop control variable to specify `Integer`, `Short`, `Long`, `Byte`, `Single`, `Double`, or `Decimal`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="29c3a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="29c3a-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a0d8b-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a0d8b-107">See also</span></span>
 
-- [<span data-ttu-id="29c3a-108">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="29c3a-108">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="a0d8b-108">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="a0d8b-108">For...Next Statement</span></span>](../language-reference/statements/for-next-statement.md)
