--- a/docs/visual-basic/misc/bc30046.md
+++ b/docs/visual-basic/misc/bc30046.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30046
 ms.assetid: 41066df8-c9ee-4f67-9f6c-4f62e3abc7be
-ms.openlocfilehash: c8e83842d6782b62d7406763054e16e7408fb468
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 08dcfd99d2326bd08fcc6c57497c379588372404
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649949"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381446"
 ---
-# <a name="method-cannot-have-both-a-paramarray-and-optional-parameters"></a><span data-ttu-id="65db4-102">Il metodo non può accettare entrambi i parametri ParamArray e Optional</span><span class="sxs-lookup"><span data-stu-id="65db4-102">Method cannot have both a ParamArray and Optional parameters</span></span>
-<span data-ttu-id="65db4-103">L'argomento `ParamArray` è automaticamente facoltativo e deve essere l'unico argomento facoltativo nella dichiarazione di routine.</span><span class="sxs-lookup"><span data-stu-id="65db4-103">A `ParamArray` argument is automatically optional, and it must be the only optional argument in the procedure declaration.</span></span> <span data-ttu-id="65db4-104">Tutti gli argomenti precedenti devono essere obbligatori.</span><span class="sxs-lookup"><span data-stu-id="65db4-104">All preceding arguments must be required.</span></span>  
+# <a name="method-cannot-have-both-a-paramarray-and-optional-parameters"></a><span data-ttu-id="e5ac9-102">Il metodo non può accettare entrambi i parametri ParamArray e Optional</span><span class="sxs-lookup"><span data-stu-id="e5ac9-102">Method cannot have both a ParamArray and Optional parameters</span></span>
+<span data-ttu-id="e5ac9-103">L'argomento `ParamArray` è automaticamente facoltativo e deve essere l'unico argomento facoltativo nella dichiarazione di routine.</span><span class="sxs-lookup"><span data-stu-id="e5ac9-103">A `ParamArray` argument is automatically optional, and it must be the only optional argument in the procedure declaration.</span></span> <span data-ttu-id="e5ac9-104">Tutti gli argomenti precedenti devono essere obbligatori.</span><span class="sxs-lookup"><span data-stu-id="e5ac9-104">All preceding arguments must be required.</span></span>  
   
- <span data-ttu-id="65db4-105">**ID errore:** BC30046</span><span class="sxs-lookup"><span data-stu-id="65db4-105">**Error ID:** BC30046</span></span>  
+ <span data-ttu-id="e5ac9-105">**ID errore:** BC30046</span><span class="sxs-lookup"><span data-stu-id="e5ac9-105">**Error ID:** BC30046</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="65db4-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="65db4-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e5ac9-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e5ac9-106">To correct this error</span></span>  
   
-- <span data-ttu-id="65db4-107">Rimuovere gli argomenti facoltativi nella dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="65db4-107">Remove the optional arguments in the declaration.</span></span>  
+- <span data-ttu-id="e5ac9-107">Rimuovere gli argomenti facoltativi nella dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="e5ac9-107">Remove the optional arguments in the declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="65db4-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="65db4-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e5ac9-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e5ac9-108">See also</span></span>
 
-- [<span data-ttu-id="65db4-109">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="65db4-109">Parameter Arrays</span></span>](../../visual-basic/programming-guide/language-features/procedures/parameter-arrays.md)
-- [<span data-ttu-id="65db4-110">ParamArray</span><span class="sxs-lookup"><span data-stu-id="65db4-110">ParamArray</span></span>](../../visual-basic/language-reference/modifiers/paramarray.md)
+- [<span data-ttu-id="e5ac9-109">Matrici di parametri</span><span class="sxs-lookup"><span data-stu-id="e5ac9-109">Parameter Arrays</span></span>](../programming-guide/language-features/procedures/parameter-arrays.md)
+- [<span data-ttu-id="e5ac9-110">ParamArray</span><span class="sxs-lookup"><span data-stu-id="e5ac9-110">ParamArray</span></span>](../language-reference/modifiers/paramarray.md)
