--- a/docs/visual-basic/misc/bc30064.md
+++ b/docs/visual-basic/misc/bc30064.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30064
 ms.assetid: 17e0751d-4c22-40b2-bb07-cb5c845dbc30
-ms.openlocfilehash: 46ca53768d7e694d4dae921f52f997b18ea645d2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d995801e56b00b9e8a7986aeb95559e82c46bef4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622491"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381433"
 ---
-# <a name="readonly-variable-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="105fb-102">La variabile 'ReadOnly' non può essere la destinazione di un'assegnazione</span><span class="sxs-lookup"><span data-stu-id="105fb-102">'ReadOnly' variable cannot be the target of an assignment</span></span>
-<span data-ttu-id="105fb-103">Una proprietà `ReadOnly` si trova in un contesto che le assegna un valore.</span><span class="sxs-lookup"><span data-stu-id="105fb-103">A `ReadOnly` property has been found in a context that assigns a value to it.</span></span> <span data-ttu-id="105fb-104">Solo alle variabili, alle proprietà e agli elementi di matrice scrivibili è possibile assegnare valori durante l'esecuzione.</span><span class="sxs-lookup"><span data-stu-id="105fb-104">Only writable variables, properties, and array elements can have values assigned to them during execution.</span></span>  
+# <a name="readonly-variable-cannot-be-the-target-of-an-assignment"></a><span data-ttu-id="313f8-102">La variabile 'ReadOnly' non può essere la destinazione di un'assegnazione</span><span class="sxs-lookup"><span data-stu-id="313f8-102">'ReadOnly' variable cannot be the target of an assignment</span></span>
+<span data-ttu-id="313f8-103">Una proprietà `ReadOnly` si trova in un contesto che le assegna un valore.</span><span class="sxs-lookup"><span data-stu-id="313f8-103">A `ReadOnly` property has been found in a context that assigns a value to it.</span></span> <span data-ttu-id="313f8-104">Solo alle variabili, alle proprietà e agli elementi di matrice scrivibili è possibile assegnare valori durante l'esecuzione.</span><span class="sxs-lookup"><span data-stu-id="313f8-104">Only writable variables, properties, and array elements can have values assigned to them during execution.</span></span>  
   
- <span data-ttu-id="105fb-105">**ID errore:** BC30064</span><span class="sxs-lookup"><span data-stu-id="105fb-105">**Error ID:** BC30064</span></span>  
+ <span data-ttu-id="313f8-105">**ID errore:** BC30064</span><span class="sxs-lookup"><span data-stu-id="313f8-105">**Error ID:** BC30064</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="105fb-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="105fb-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="313f8-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="313f8-106">To correct this error</span></span>  
   
-- <span data-ttu-id="105fb-107">Rimuovere la parola chiave `ReadOnly` dall'istruzione `Dim` di dichiarazione della variabile oppure rimuovere l'istruzione che le assegna un valore.</span><span class="sxs-lookup"><span data-stu-id="105fb-107">Remove the `ReadOnly` keyword from the `Dim` statement declaring the variable, or remove the statement that assigns it a value.</span></span>  
+- <span data-ttu-id="313f8-107">Rimuovere la parola chiave `ReadOnly` dall'istruzione `Dim` di dichiarazione della variabile oppure rimuovere l'istruzione che le assegna un valore.</span><span class="sxs-lookup"><span data-stu-id="313f8-107">Remove the `ReadOnly` keyword from the `Dim` statement declaring the variable, or remove the statement that assigns it a value.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="105fb-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="105fb-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="313f8-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="313f8-108">See also</span></span>
 
-- [<span data-ttu-id="105fb-109">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="105fb-109">ReadOnly</span></span>](../../visual-basic/language-reference/modifiers/readonly.md)
-- [<span data-ttu-id="105fb-110">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="105fb-110">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="313f8-109">ReadOnly</span><span class="sxs-lookup"><span data-stu-id="313f8-109">ReadOnly</span></span>](../language-reference/modifiers/readonly.md)
+- [<span data-ttu-id="313f8-110">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="313f8-110">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
