--- a/docs/visual-basic/misc/bc30069.md
+++ b/docs/visual-basic/misc/bc30069.md
@@ -1,5 +1,5 @@
 ---
-title: Variabile di controllo ciclo for '<variablename>' già in uso da un ciclo For di inclusione
+title: Variabile '<variablename>' di controllo del ciclo 'For' già in uso da un ciclo 'For' di inclusione
 ms.date: 07/20/2015
 f1_keywords:
 - bc30069
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30069
 ms.assetid: e12c8cd5-55ad-4d10-8a3b-7b27f3716c8c
-ms.openlocfilehash: 457f50f860a1a60c6197d6973cfe171e6f7d7b96
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: fb4461b3673dceecf778e5532c002f3623029602
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622402"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381313"
 ---
-# <a name="for-loop-control-variable-variablename-already-in-use-by-an-enclosing-for-loop"></a><span data-ttu-id="d36e8-102">Variabile di controllo ciclo for '\<nomevariabile >' già in uso da un ciclo For di inclusione</span><span class="sxs-lookup"><span data-stu-id="d36e8-102">For loop control variable '\<variablename>' already in use by an enclosing For loop</span></span>
-<span data-ttu-id="d36e8-103">Tutti i cicli annidati `For` devono usare variabili di controllo univoche.</span><span class="sxs-lookup"><span data-stu-id="d36e8-103">Nested `For` loops all must use unique control variables.</span></span>  
+# <a name="for-loop-control-variable-variablename-already-in-use-by-an-enclosing-for-loop"></a><span data-ttu-id="f6eba-102">Variabile '\<variablename>' di controllo del ciclo 'For' già in uso da un ciclo 'For' di inclusione</span><span class="sxs-lookup"><span data-stu-id="f6eba-102">For loop control variable '\<variablename>' already in use by an enclosing For loop</span></span>
+<span data-ttu-id="f6eba-103">Tutti i cicli annidati `For` devono usare variabili di controllo univoche.</span><span class="sxs-lookup"><span data-stu-id="f6eba-103">Nested `For` loops all must use unique control variables.</span></span>  
   
- <span data-ttu-id="d36e8-104">**ID errore:** BC30069</span><span class="sxs-lookup"><span data-stu-id="d36e8-104">**Error ID:** BC30069</span></span>  
+ <span data-ttu-id="f6eba-104">**ID errore:** BC30069</span><span class="sxs-lookup"><span data-stu-id="f6eba-104">**Error ID:** BC30069</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d36e8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d36e8-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f6eba-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f6eba-105">To correct this error</span></span>  
   
-- <span data-ttu-id="d36e8-106">Modificare uno dei nomi della variabile di controllo.</span><span class="sxs-lookup"><span data-stu-id="d36e8-106">Change one of the control variable names.</span></span>  
+- <span data-ttu-id="f6eba-106">Modificare uno dei nomi della variabile di controllo.</span><span class="sxs-lookup"><span data-stu-id="f6eba-106">Change one of the control variable names.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d36e8-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d36e8-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f6eba-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f6eba-107">See also</span></span>
 
-- [<span data-ttu-id="d36e8-108">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="d36e8-108">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="f6eba-108">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="f6eba-108">For...Next Statement</span></span>](../language-reference/statements/for-next-statement.md)
