--- a/docs/visual-basic/misc/bc30075.md
+++ b/docs/visual-basic/misc/bc30075.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30075
 ms.assetid: a25025c9-0763-4c19-9e9b-cffb9aacaa8a
-ms.openlocfilehash: 67d16ac7ee8c1d906acbfed8bf89074c27f6cf4e
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 2b0c69261cc81b14216cc39926d6cbaac26e2ae7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69658691"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380835"
 ---
-# <a name="named-arguments-are-not-valid-as-array-subscripts"></a><span data-ttu-id="91a4b-102">Gli argomenti denominati non sono validi come indici di matrice</span><span class="sxs-lookup"><span data-stu-id="91a4b-102">Named arguments are not valid as array subscripts</span></span>
-<span data-ttu-id="91a4b-103">Un indice di matrice viene specificato usando la sintassi per passare un argomento di routine in base al nome, ad esempio `Array(Index := 10)`.</span><span class="sxs-lookup"><span data-stu-id="91a4b-103">An array index is specified using the syntax for passing a procedure argument by name, for example `Array(Index := 10)`.</span></span> <span data-ttu-id="91a4b-104">Questa sintassi non è valida per gli indici di matrice.</span><span class="sxs-lookup"><span data-stu-id="91a4b-104">This syntax is not valid for array subscripts.</span></span>  
+# <a name="named-arguments-are-not-valid-as-array-subscripts"></a><span data-ttu-id="f47e7-102">Gli argomenti denominati non sono validi come indici di matrice</span><span class="sxs-lookup"><span data-stu-id="f47e7-102">Named arguments are not valid as array subscripts</span></span>
+<span data-ttu-id="f47e7-103">Un indice di matrice viene specificato usando la sintassi per passare un argomento di routine in base al nome, ad esempio `Array(Index := 10)`.</span><span class="sxs-lookup"><span data-stu-id="f47e7-103">An array index is specified using the syntax for passing a procedure argument by name, for example `Array(Index := 10)`.</span></span> <span data-ttu-id="f47e7-104">Questa sintassi non è valida per gli indici di matrice.</span><span class="sxs-lookup"><span data-stu-id="f47e7-104">This syntax is not valid for array subscripts.</span></span>  
   
- <span data-ttu-id="91a4b-105">**ID errore:** BC30075</span><span class="sxs-lookup"><span data-stu-id="91a4b-105">**Error ID:** BC30075</span></span>  
+ <span data-ttu-id="f47e7-105">**ID errore:** BC30075</span><span class="sxs-lookup"><span data-stu-id="f47e7-105">**Error ID:** BC30075</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="91a4b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="91a4b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f47e7-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f47e7-106">To correct this error</span></span>  
   
-- <span data-ttu-id="91a4b-107">Usare un'espressione costante o variabile ordinaria come indice di matrice, ad esempio `Array(10)`.</span><span class="sxs-lookup"><span data-stu-id="91a4b-107">Use an ordinary variable or constant expression as the array index, for example `Array(10)`.</span></span>  
+- <span data-ttu-id="f47e7-107">Usare un'espressione costante o variabile ordinaria come indice di matrice, ad esempio `Array(10)`.</span><span class="sxs-lookup"><span data-stu-id="f47e7-107">Use an ordinary variable or constant expression as the array index, for example `Array(10)`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="91a4b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="91a4b-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f47e7-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f47e7-108">See also</span></span>
 
-- [<span data-ttu-id="91a4b-109">Matrici in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="91a4b-109">Arrays in Visual Basic</span></span>](../programming-guide/language-features/arrays/index.md)
-- [<span data-ttu-id="91a4b-110">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="91a4b-110">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [<span data-ttu-id="f47e7-109">Matrici in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="f47e7-109">Arrays in Visual Basic</span></span>](../programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="f47e7-110">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="f47e7-110">Passing Arguments by Position and by Name</span></span>](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
