--- a/docs/visual-basic/misc/bc30081.md
+++ b/docs/visual-basic/misc/bc30081.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30081
 ms.assetid: e5905d59-56bb-4daf-aca5-5ff847fc62f6
-ms.openlocfilehash: 53fbae8b30b00823eed42ca6ff43b79cbe879e4b
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 4c0451f7f50b9dc370d6a70003a5bf4edfa595e8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935993"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380744"
 ---
-# <a name="if-must-end-with-a-matching-end-if"></a><span data-ttu-id="68f3c-102">'If' deve terminare con un oggetto 'End If' corrispondente</span><span class="sxs-lookup"><span data-stu-id="68f3c-102">'If' must end with a matching 'End If'</span></span>
-<span data-ttu-id="68f3c-103">Un'istruzione `If` si verifica senza un'istruzione `End If` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="68f3c-103">An `If` statement occurs without a corresponding `End If` statement.</span></span> <span data-ttu-id="68f3c-104">Deve essere usata un'istruzione `End If` per terminare il blocco `If` .</span><span class="sxs-lookup"><span data-stu-id="68f3c-104">An `End If` statement must be used to end the `If` block.</span></span>  
+# <a name="if-must-end-with-a-matching-end-if"></a><span data-ttu-id="97556-102">'If' deve terminare con un oggetto 'End If' corrispondente</span><span class="sxs-lookup"><span data-stu-id="97556-102">'If' must end with a matching 'End If'</span></span>
+<span data-ttu-id="97556-103">Un'istruzione `If` si verifica senza un'istruzione `End If` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="97556-103">An `If` statement occurs without a corresponding `End If` statement.</span></span> <span data-ttu-id="97556-104">Deve essere usata un'istruzione `End If` per terminare il blocco `If` .</span><span class="sxs-lookup"><span data-stu-id="97556-104">An `End If` statement must be used to end the `If` block.</span></span>  
   
- <span data-ttu-id="68f3c-105">**ID errore:** BC30081</span><span class="sxs-lookup"><span data-stu-id="68f3c-105">**Error ID:** BC30081</span></span>  
+ <span data-ttu-id="97556-105">**ID errore:** BC30081</span><span class="sxs-lookup"><span data-stu-id="97556-105">**Error ID:** BC30081</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="68f3c-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="68f3c-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="97556-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="97556-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="68f3c-107">Se questo blocco `If` fa parte di un set di blocchi `If` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="68f3c-107">If this `If` block is part of a set of nested `If` blocks, make sure each block is properly terminated.</span></span>  
+1. <span data-ttu-id="97556-107">Se questo blocco `If` fa parte di un set di blocchi `If` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="97556-107">If this `If` block is part of a set of nested `If` blocks, make sure each block is properly terminated.</span></span>  
   
-2. <span data-ttu-id="68f3c-108">Aggiungere un'istruzione `End If` alla fine del blocco `If` .</span><span class="sxs-lookup"><span data-stu-id="68f3c-108">Add an `End If` statement to the end of the `If` block.</span></span>  
+2. <span data-ttu-id="97556-108">Aggiungere un'istruzione `End If` alla fine del blocco `If` .</span><span class="sxs-lookup"><span data-stu-id="97556-108">Add an `End If` statement to the end of the `If` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="68f3c-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="68f3c-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="97556-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="97556-109">See also</span></span>
 
-- [<span data-ttu-id="68f3c-110">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="68f3c-110">If...Then...Else Statement</span></span>](../../visual-basic/language-reference/statements/if-then-else-statement.md)
+- [<span data-ttu-id="97556-110">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="97556-110">If...Then...Else Statement</span></span>](../language-reference/statements/if-then-else-statement.md)
