--- a/docs/visual-basic/misc/bc30085.md
+++ b/docs/visual-basic/misc/bc30085.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30085
 ms.assetid: aa88f4d0-be5f-4efe-a4ef-80e6d6124e6e
-ms.openlocfilehash: 19229fff6cf0d786fa7912ef6a30d3f38ec54ca4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 44ae7da97daba3768b301bae94d2bf169d719a65
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622208"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380562"
 ---
-# <a name="with-must-end-with-a-matching-end-with"></a><span data-ttu-id="09b5a-102">'With' deve terminare con un oggetto 'End With' corrispondente</span><span class="sxs-lookup"><span data-stu-id="09b5a-102">'With' must end with a matching 'End With'</span></span>
-<span data-ttu-id="09b5a-103">Un'istruzione `With` si verifica senza un'istruzione `End With` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="09b5a-103">A `With` statement occurs without a corresponding `End With` statement.</span></span> <span data-ttu-id="09b5a-104">Deve essere usata un'istruzione `End With` per terminare il blocco `With` .</span><span class="sxs-lookup"><span data-stu-id="09b5a-104">An `End With` statement must be used to end the `With` block.</span></span>  
+# <a name="with-must-end-with-a-matching-end-with"></a><span data-ttu-id="df58a-102">'With' deve terminare con un oggetto 'End With' corrispondente</span><span class="sxs-lookup"><span data-stu-id="df58a-102">'With' must end with a matching 'End With'</span></span>
+<span data-ttu-id="df58a-103">Un'istruzione `With` si verifica senza un'istruzione `End With` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="df58a-103">A `With` statement occurs without a corresponding `End With` statement.</span></span> <span data-ttu-id="df58a-104">Deve essere usata un'istruzione `End With` per terminare il blocco `With` .</span><span class="sxs-lookup"><span data-stu-id="df58a-104">An `End With` statement must be used to end the `With` block.</span></span>  
   
- <span data-ttu-id="09b5a-105">**ID errore:** BC30085</span><span class="sxs-lookup"><span data-stu-id="09b5a-105">**Error ID:** BC30085</span></span>  
+ <span data-ttu-id="df58a-105">**ID errore:** BC30085</span><span class="sxs-lookup"><span data-stu-id="df58a-105">**Error ID:** BC30085</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="09b5a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="09b5a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="df58a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="df58a-106">To correct this error</span></span>  
   
-- <span data-ttu-id="09b5a-107">Se questo blocco `With` fa parte di un set di blocchi `With` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="09b5a-107">If this `With` block is part of a set of nested `With` blocks, make sure each block is properly terminated.</span></span>  
+- <span data-ttu-id="df58a-107">Se questo blocco `With` fa parte di un set di blocchi `With` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="df58a-107">If this `With` block is part of a set of nested `With` blocks, make sure each block is properly terminated.</span></span>  
   
-- <span data-ttu-id="09b5a-108">Aggiungere un'istruzione `End With` alla fine del blocco `With` .</span><span class="sxs-lookup"><span data-stu-id="09b5a-108">Add an `End With` statement to the end of the `With` block.</span></span>  
+- <span data-ttu-id="df58a-108">Aggiungere un'istruzione `End With` alla fine del blocco `With` .</span><span class="sxs-lookup"><span data-stu-id="df58a-108">Add an `End With` statement to the end of the `With` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="09b5a-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="09b5a-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="df58a-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="df58a-109">See also</span></span>
 
-- [<span data-ttu-id="09b5a-110">Istruzione With...End With</span><span class="sxs-lookup"><span data-stu-id="09b5a-110">With...End With Statement</span></span>](../../visual-basic/language-reference/statements/with-end-with-statement.md)
+- [<span data-ttu-id="df58a-110">Istruzione With...End With</span><span class="sxs-lookup"><span data-stu-id="df58a-110">With...End With Statement</span></span>](../language-reference/statements/with-end-with-statement.md)
