--- a/docs/visual-basic/misc/bc30094.md
+++ b/docs/visual-basic/misc/bc30094.md
@@ -1,5 +1,5 @@
 ---
-title: Etichetta '<labelname>' è già definito nell'espressione lambda su più righe metodo corrente
+title: L'etichetta '<labelname>' è già definita nel metodo o nell'espressione lambda su più righe corrente
 ms.date: 07/20/2015
 f1_keywords:
 - bc30094
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30094
 ms.assetid: e3771a22-1205-41ab-8e64-12ef679cb376
-ms.openlocfilehash: 412d975f3d4f0f9f4f0d6cf4adf5e66935de9338
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 534550c4a2a71e98df25d5b6a60ee8cbe0ae593f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935824"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370375"
 ---
-# <a name="label-labelname-is-already-defined-in-the-current-methodmultiline-lambda"></a><span data-ttu-id="a9991-102">Etichetta '\<NomeEtichetta >' è già definito nell'espressione lambda (metodo) o su più righe corrente</span><span class="sxs-lookup"><span data-stu-id="a9991-102">Label '\<labelname>' is already defined in the current method/multiline lambda</span></span>
-<span data-ttu-id="a9991-103">Il nome dell'etichetta viene duplicato all'interno della routine.</span><span class="sxs-lookup"><span data-stu-id="a9991-103">The label name is duplicated within the procedure.</span></span> <span data-ttu-id="a9991-104">Tutti i nomi all'interno di una routine devono essere univoci.</span><span class="sxs-lookup"><span data-stu-id="a9991-104">All names within a procedure must be unique.</span></span>  
+# <a name="label-labelname-is-already-defined-in-the-current-methodmultiline-lambda"></a><span data-ttu-id="24715-102">L'etichetta ' \<labelname> ' è già definita nel metodo o nell'espressione lambda su più righe corrente</span><span class="sxs-lookup"><span data-stu-id="24715-102">Label '\<labelname>' is already defined in the current method/multiline lambda</span></span>
+<span data-ttu-id="24715-103">Il nome dell'etichetta viene duplicato all'interno della routine.</span><span class="sxs-lookup"><span data-stu-id="24715-103">The label name is duplicated within the procedure.</span></span> <span data-ttu-id="24715-104">Tutti i nomi all'interno di una routine devono essere univoci.</span><span class="sxs-lookup"><span data-stu-id="24715-104">All names within a procedure must be unique.</span></span>  
   
- <span data-ttu-id="a9991-105">**ID errore:** BC30094</span><span class="sxs-lookup"><span data-stu-id="a9991-105">**Error ID:** BC30094</span></span>  
+ <span data-ttu-id="24715-105">**ID errore:** BC30094</span><span class="sxs-lookup"><span data-stu-id="24715-105">**Error ID:** BC30094</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a9991-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a9991-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="24715-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="24715-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="a9991-107">Rinominare l'etichetta duplicata.</span><span class="sxs-lookup"><span data-stu-id="a9991-107">Rename the duplicate label.</span></span>  
+1. <span data-ttu-id="24715-107">Rinominare l'etichetta duplicata.</span><span class="sxs-lookup"><span data-stu-id="24715-107">Rename the duplicate label.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a9991-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a9991-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="24715-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="24715-108">See also</span></span>
 
-- [<span data-ttu-id="a9991-109">Nomi di elementi dichiarati</span><span class="sxs-lookup"><span data-stu-id="a9991-109">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
-- [<span data-ttu-id="a9991-110">Procedura: etichettare le istruzioni</span><span class="sxs-lookup"><span data-stu-id="a9991-110">How to: Label Statements</span></span>](../../visual-basic/programming-guide/program-structure/how-to-label-statements.md)
+- [<span data-ttu-id="24715-109">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="24715-109">Declared Element Names</span></span>](../programming-guide/language-features/declared-elements/declared-element-names.md)
+- [<span data-ttu-id="24715-110">Procedura: Etichettare le istruzioni</span><span class="sxs-lookup"><span data-stu-id="24715-110">How to: Label Statements</span></span>](../programming-guide/program-structure/how-to-label-statements.md)
