--- a/docs/visual-basic/misc/bc30097.md
+++ b/docs/visual-basic/misc/bc30097.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30097
 ms.assetid: cf0a3e09-5252-4198-bb27-c103c98d9f19
-ms.openlocfilehash: 13481530ade8632224d6e4729f7a7f586a795c30
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 6c25e12865d318c3ae42a90c4ebfe9318241d928
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935785"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370245"
 ---
-# <a name="exit-while-can-only-appear-inside-a-while-statement"></a><span data-ttu-id="a6b66-102">'Exit While' può trovarsi solo all'interno di un'istruzione 'While'</span><span class="sxs-lookup"><span data-stu-id="a6b66-102">'Exit While' can only appear inside a 'While' statement</span></span>
-<span data-ttu-id="a6b66-103">Un'istruzione `Exit While` si verifica al di fuori di un blocco `While` .</span><span class="sxs-lookup"><span data-stu-id="a6b66-103">An `Exit While` statement occurs outside a `While` block.</span></span> <span data-ttu-id="a6b66-104">`Exit While` è valido solo tra un'istruzione `While` e un'istruzione `End While` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="a6b66-104">`Exit While` is valid only between a `While` statement and a corresponding `End While` statement.</span></span>  
+# <a name="exit-while-can-only-appear-inside-a-while-statement"></a><span data-ttu-id="301bf-102">'Exit While' può trovarsi solo all'interno di un'istruzione 'While'</span><span class="sxs-lookup"><span data-stu-id="301bf-102">'Exit While' can only appear inside a 'While' statement</span></span>
+<span data-ttu-id="301bf-103">Un'istruzione `Exit While` si verifica al di fuori di un blocco `While` .</span><span class="sxs-lookup"><span data-stu-id="301bf-103">An `Exit While` statement occurs outside a `While` block.</span></span> <span data-ttu-id="301bf-104">`Exit While` è valido solo tra un'istruzione `While` e un'istruzione `End While` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="301bf-104">`Exit While` is valid only between a `While` statement and a corresponding `End While` statement.</span></span>  
   
- <span data-ttu-id="a6b66-105">**ID errore:** BC30097</span><span class="sxs-lookup"><span data-stu-id="a6b66-105">**Error ID:** BC30097</span></span>  
+ <span data-ttu-id="301bf-105">**ID errore:** BC30097</span><span class="sxs-lookup"><span data-stu-id="301bf-105">**Error ID:** BC30097</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a6b66-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a6b66-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="301bf-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="301bf-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="a6b66-107">Verificare che un'istruzione `While` valida preceda `Exit While` e che un'istruzione `End While` valida lo segua.</span><span class="sxs-lookup"><span data-stu-id="a6b66-107">Make sure a valid `While` statement precedes the `Exit While` and a valid `End While` statement appears after it.</span></span>  
+1. <span data-ttu-id="301bf-107">Verificare che un'istruzione `While` valida preceda `Exit While` e che un'istruzione `End While` valida lo segua.</span><span class="sxs-lookup"><span data-stu-id="301bf-107">Make sure a valid `While` statement precedes the `Exit While` and a valid `End While` statement appears after it.</span></span>  
   
-2. <span data-ttu-id="a6b66-108">Verificare che le altre strutture di controllo all'interno del blocco `While` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="a6b66-108">Verify that other control structures within the `While` block are correctly terminated.</span></span>  
+2. <span data-ttu-id="301bf-108">Verificare che le altre strutture di controllo all'interno del blocco `While` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="301bf-108">Verify that other control structures within the `While` block are correctly terminated.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a6b66-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a6b66-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="301bf-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="301bf-109">See also</span></span>
 
-- [<span data-ttu-id="a6b66-110">Istruzione While...End While</span><span class="sxs-lookup"><span data-stu-id="a6b66-110">While...End While Statement</span></span>](../../visual-basic/language-reference/statements/while-end-while-statement.md)
+- [<span data-ttu-id="301bf-110">Istruzione While...End While</span><span class="sxs-lookup"><span data-stu-id="301bf-110">While...End While Statement</span></span>](../language-reference/statements/while-end-while-statement.md)
