--- a/docs/visual-basic/misc/bc30105.md
+++ b/docs/visual-basic/misc/bc30105.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30105
 ms.assetid: 6074acee-7ffd-447e-ab67-4f927f831d80
-ms.openlocfilehash: be02bcddf0a6b51c79f0a739641dfc64390e5978
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 3eff6f8412b99a53a3fc90ed5c94cc19bcda733a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64642694"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380380"
 ---
-# <a name="number-of-indices-is-less-than-the-number-of-dimensions-of-the-indexed-array"></a><span data-ttu-id="484cb-102">Il numero di indici è inferiore al numero di dimensioni della matrice indicizzata</span><span class="sxs-lookup"><span data-stu-id="484cb-102">Number of indices is less than the number of dimensions of the indexed array</span></span>
-<span data-ttu-id="484cb-103">Il numero di indici usati per accedere a un elemento di matrice deve essere esattamente uguale all'ordine di priorità della matrice, vale a dire al numero di dimensioni dichiarate per la matrice.</span><span class="sxs-lookup"><span data-stu-id="484cb-103">The number of indices used to access an array element must be exactly the same as the rank of the array, that is, the number of dimensions declared for it.</span></span>  
+# <a name="number-of-indices-is-less-than-the-number-of-dimensions-of-the-indexed-array"></a><span data-ttu-id="62236-102">Il numero di indici è inferiore al numero di dimensioni della matrice indicizzata</span><span class="sxs-lookup"><span data-stu-id="62236-102">Number of indices is less than the number of dimensions of the indexed array</span></span>
+<span data-ttu-id="62236-103">Il numero di indici usati per accedere a un elemento di matrice deve essere esattamente uguale all'ordine di priorità della matrice, vale a dire al numero di dimensioni dichiarate per la matrice.</span><span class="sxs-lookup"><span data-stu-id="62236-103">The number of indices used to access an array element must be exactly the same as the rank of the array, that is, the number of dimensions declared for it.</span></span>  
   
- <span data-ttu-id="484cb-104">**ID errore:** BC30105</span><span class="sxs-lookup"><span data-stu-id="484cb-104">**Error ID:** BC30105</span></span>  
+ <span data-ttu-id="62236-104">**ID errore:** BC30105</span><span class="sxs-lookup"><span data-stu-id="62236-104">**Error ID:** BC30105</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="484cb-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="484cb-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="62236-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="62236-105">To correct this error</span></span>  
   
-- <span data-ttu-id="484cb-106">Aggiungere indici al riferimento della matrice fino a quando il numero totale di indici è pari all'ordine della matrice.</span><span class="sxs-lookup"><span data-stu-id="484cb-106">Add subscripts to the array reference until the total number of subscripts equals the rank of the array.</span></span>  
+- <span data-ttu-id="62236-106">Aggiungere indici al riferimento della matrice fino a quando il numero totale di indici è pari all'ordine della matrice.</span><span class="sxs-lookup"><span data-stu-id="62236-106">Add subscripts to the array reference until the total number of subscripts equals the rank of the array.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="484cb-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="484cb-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="62236-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="62236-107">See also</span></span>
 
-- [<span data-ttu-id="484cb-108">Matrici</span><span class="sxs-lookup"><span data-stu-id="484cb-108">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="62236-108">Matrici</span><span class="sxs-lookup"><span data-stu-id="62236-108">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
