--- a/docs/visual-basic/misc/bc30126.md
+++ b/docs/visual-basic/misc/bc30126.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30126
 ms.assetid: a522c39e-1f11-45c8-a00b-3546c842909a
-ms.openlocfilehash: 7242aef2bcbc59e18737ea691553cf76db0bace3
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: a2b3a566254bec5c0aa7c7b0779366d41052549a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61682911"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380250"
 ---
-# <a name="readonly-property-must-provide-a-get"></a><span data-ttu-id="f01f3-102">La proprietà 'ReadOnly' deve fornire un elemento 'Get'</span><span class="sxs-lookup"><span data-stu-id="f01f3-102">'ReadOnly' property must provide a 'Get'</span></span>
-<span data-ttu-id="f01f3-103">Se una proprietà viene dichiarata come `ReadOnly`, deve fornire una routine per la lettura del relativo valore.</span><span class="sxs-lookup"><span data-stu-id="f01f3-103">If a property is declared as `ReadOnly`, it must supply a procedure for reading its value.</span></span>  
+# <a name="readonly-property-must-provide-a-get"></a><span data-ttu-id="4cfc5-102">La proprietà 'ReadOnly' deve fornire un elemento 'Get'</span><span class="sxs-lookup"><span data-stu-id="4cfc5-102">'ReadOnly' property must provide a 'Get'</span></span>
+<span data-ttu-id="4cfc5-103">Se una proprietà viene dichiarata come `ReadOnly`, deve fornire una routine per la lettura del relativo valore.</span><span class="sxs-lookup"><span data-stu-id="4cfc5-103">If a property is declared as `ReadOnly`, it must supply a procedure for reading its value.</span></span>  
   
- <span data-ttu-id="f01f3-104">**ID errore:** BC30126</span><span class="sxs-lookup"><span data-stu-id="f01f3-104">**Error ID:** BC30126</span></span>  
+ <span data-ttu-id="4cfc5-104">**ID errore:** BC30126</span><span class="sxs-lookup"><span data-stu-id="4cfc5-104">**Error ID:** BC30126</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f01f3-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f01f3-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4cfc5-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4cfc5-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="f01f3-106">Assicurarsi di includere una routine `Get` tra le istruzioni `Property` e `End Property` .</span><span class="sxs-lookup"><span data-stu-id="f01f3-106">Make sure you include a `Get` procedure between the `Property` statement and the `End Property` statement.</span></span>  
+1. <span data-ttu-id="4cfc5-106">Assicurarsi di includere una routine `Get` tra le istruzioni `Property` e `End Property` .</span><span class="sxs-lookup"><span data-stu-id="4cfc5-106">Make sure you include a `Get` procedure between the `Property` statement and the `End Property` statement.</span></span>  
   
-2. <span data-ttu-id="f01f3-107">Verificare che le altre routine all'interno della dichiarazione `Property` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="f01f3-107">Verify that other procedures within the `Property` declaration are correctly terminated.</span></span>  
+2. <span data-ttu-id="4cfc5-107">Verificare che le altre routine all'interno della dichiarazione `Property` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="4cfc5-107">Verify that other procedures within the `Property` declaration are correctly terminated.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f01f3-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f01f3-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4cfc5-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4cfc5-108">See also</span></span>
 
-- [<span data-ttu-id="f01f3-109">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="f01f3-109">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
-- [<span data-ttu-id="f01f3-110">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="f01f3-110">Get Statement</span></span>](../../visual-basic/language-reference/statements/get-statement.md)
+- [<span data-ttu-id="4cfc5-109">Property Statement</span><span class="sxs-lookup"><span data-stu-id="4cfc5-109">Property Statement</span></span>](../language-reference/statements/property-statement.md)
+- [<span data-ttu-id="4cfc5-110">Istruzione Get</span><span class="sxs-lookup"><span data-stu-id="4cfc5-110">Get Statement</span></span>](../language-reference/statements/get-statement.md)
