--- a/docs/visual-basic/misc/bc30234.md
+++ b/docs/visual-basic/misc/bc30234.md
@@ -1,5 +1,5 @@
 ---
-title: "'<specifier>' non è valido in una dichiarazione WithEvents"
+title: "' <specifier> ' non valido in una dichiarazione WithEvents"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30234
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30234
 ms.assetid: f7c9e2e4-d2f6-4bcf-bea9-a290c4c64804
-ms.openlocfilehash: 32563990f794f7da94ed0ab416f739525f00335a
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 41b3e1e3359db26bd0c840b3fddd1f5b097f3ef6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62027914"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370141"
 ---
-# <a name="specifier-is-not-valid-on-a-withevents-declaration"></a><span data-ttu-id="60474-102">'\<identificatore >' non è valido in una dichiarazione WithEvents</span><span class="sxs-lookup"><span data-stu-id="60474-102">'\<specifier>' is not valid on a WithEvents declaration</span></span>
-<span data-ttu-id="60474-103">Un'istruzione `Dim` contiene una parola chiave, ad esempio `ReadOnly`, che non è valida in combinazione con la parole chiave `WithEvents` .</span><span class="sxs-lookup"><span data-stu-id="60474-103">A `Dim` statement contains a keyword, such as `ReadOnly`, that is invalid in combination with the `WithEvents` keyword.</span></span>  
+# <a name="specifier-is-not-valid-on-a-withevents-declaration"></a><span data-ttu-id="1bf7e-102">' \<specifier> ' non valido in una dichiarazione WithEvents</span><span class="sxs-lookup"><span data-stu-id="1bf7e-102">'\<specifier>' is not valid on a WithEvents declaration</span></span>
+<span data-ttu-id="1bf7e-103">Un'istruzione `Dim` contiene una parola chiave, ad esempio `ReadOnly`, che non è valida in combinazione con la parole chiave `WithEvents` .</span><span class="sxs-lookup"><span data-stu-id="1bf7e-103">A `Dim` statement contains a keyword, such as `ReadOnly`, that is invalid in combination with the `WithEvents` keyword.</span></span>  
   
- <span data-ttu-id="60474-104">**ID errore:** BC30234</span><span class="sxs-lookup"><span data-stu-id="60474-104">**Error ID:** BC30234</span></span>  
+ <span data-ttu-id="1bf7e-104">**ID errore:** BC30234</span><span class="sxs-lookup"><span data-stu-id="1bf7e-104">**Error ID:** BC30234</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="60474-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="60474-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1bf7e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1bf7e-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="60474-106">Rimuovere la parola chiave non valida dall'istruzione `Dim` .</span><span class="sxs-lookup"><span data-stu-id="60474-106">Remove the invalid keyword from the `Dim` statement.</span></span>  
+1. <span data-ttu-id="1bf7e-106">Rimuovere la parola chiave non valida dall'istruzione `Dim` .</span><span class="sxs-lookup"><span data-stu-id="1bf7e-106">Remove the invalid keyword from the `Dim` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="60474-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="60474-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1bf7e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1bf7e-107">See also</span></span>
 
-- [<span data-ttu-id="60474-108">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="60474-108">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
-- [<span data-ttu-id="60474-109">WithEvents</span><span class="sxs-lookup"><span data-stu-id="60474-109">WithEvents</span></span>](../../visual-basic/language-reference/modifiers/withevents.md)
+- [<span data-ttu-id="1bf7e-108">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="1bf7e-108">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="1bf7e-109">WithEvents</span><span class="sxs-lookup"><span data-stu-id="1bf7e-109">WithEvents</span></span>](../language-reference/modifiers/withevents.md)
