--- a/docs/visual-basic/misc/bc30235.md
+++ b/docs/visual-basic/misc/bc30235.md
@@ -1,5 +1,5 @@
 ---
-title: "'<specifier>' non è valido in una dichiarazione di variabile membro"
+title: "' <specifier> ' non valido in una dichiarazione di variabile membro"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30235
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC30235
 ms.assetid: 8c5764e4-0096-4ca0-8656-05341a39833a
-ms.openlocfilehash: eee55835676119c002ab77eae8fcb6b25f08c095
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 6674eea9d6013d8946fc43a9cda4c6c45fcff2e8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62027901"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379926"
 ---
-# <a name="specifier-is-not-valid-on-a-member-variable-declaration"></a><span data-ttu-id="4fe70-102">'\<identificatore >' non è valido in una dichiarazione di variabile membro</span><span class="sxs-lookup"><span data-stu-id="4fe70-102">'\<specifier>' is not valid on a member variable declaration</span></span>
-<span data-ttu-id="4fe70-103">Un'istruzione `Dim` contiene una parola chiave non valida.</span><span class="sxs-lookup"><span data-stu-id="4fe70-103">A `Dim` statement contains an invalid keyword.</span></span> <span data-ttu-id="4fe70-104">Un'istruzione `Dim` può includere solo le parole chiave `Friend`, `Private`, `Protected`, `Public`, `ReadOnly`, `Shadows`, `Shared`o `Static` .</span><span class="sxs-lookup"><span data-stu-id="4fe70-104">A `Dim` statement can include only the `Friend`, `Private`, `Protected`, `Public`, `ReadOnly`, `Shadows`, `Shared`, or `Static` keywords.</span></span>  
+# <a name="specifier-is-not-valid-on-a-member-variable-declaration"></a><span data-ttu-id="3cb4b-102">' \<specifier> ' non valido in una dichiarazione di variabile membro</span><span class="sxs-lookup"><span data-stu-id="3cb4b-102">'\<specifier>' is not valid on a member variable declaration</span></span>
+<span data-ttu-id="3cb4b-103">Un'istruzione `Dim` contiene una parola chiave non valida.</span><span class="sxs-lookup"><span data-stu-id="3cb4b-103">A `Dim` statement contains an invalid keyword.</span></span> <span data-ttu-id="3cb4b-104">Un'istruzione `Dim` può includere solo le parole chiave `Friend`, `Private`, `Protected`, `Public`, `ReadOnly`, `Shadows`, `Shared`o `Static` .</span><span class="sxs-lookup"><span data-stu-id="3cb4b-104">A `Dim` statement can include only the `Friend`, `Private`, `Protected`, `Public`, `ReadOnly`, `Shadows`, `Shared`, or `Static` keywords.</span></span>  
   
- <span data-ttu-id="4fe70-105">Questo messaggio può comparire anche se si dichiara una variabile `Static` all'esterno di una routine.</span><span class="sxs-lookup"><span data-stu-id="4fe70-105">This message can also appear if you declare a `Static` variable outside of a procedure.</span></span> <span data-ttu-id="4fe70-106">Si può usare `Static` solo a livello di routine.</span><span class="sxs-lookup"><span data-stu-id="4fe70-106">You can use `Static` only at procedure level.</span></span>  
+ <span data-ttu-id="3cb4b-105">Questo messaggio può comparire anche se si dichiara una variabile `Static` all'esterno di una routine.</span><span class="sxs-lookup"><span data-stu-id="3cb4b-105">This message can also appear if you declare a `Static` variable outside of a procedure.</span></span> <span data-ttu-id="3cb4b-106">Si può usare `Static` solo a livello di routine.</span><span class="sxs-lookup"><span data-stu-id="3cb4b-106">You can use `Static` only at procedure level.</span></span>  
   
- <span data-ttu-id="4fe70-107">Tenere presente che se si include una parola chiave valida in un'istruzione `Dim` , si può omettere la parola chiave `Dim` .</span><span class="sxs-lookup"><span data-stu-id="4fe70-107">Note that if you include a valid keyword in a `Dim` statement, you can optionally omit the `Dim` keyword.</span></span>  
+ <span data-ttu-id="3cb4b-107">Tenere presente che se si include una parola chiave valida in un'istruzione `Dim` , si può omettere la parola chiave `Dim` .</span><span class="sxs-lookup"><span data-stu-id="3cb4b-107">Note that if you include a valid keyword in a `Dim` statement, you can optionally omit the `Dim` keyword.</span></span>  
   
- <span data-ttu-id="4fe70-108">**ID errore:** BC30235</span><span class="sxs-lookup"><span data-stu-id="4fe70-108">**Error ID:** BC30235</span></span>  
+ <span data-ttu-id="3cb4b-108">**ID errore:** BC30235</span><span class="sxs-lookup"><span data-stu-id="3cb4b-108">**Error ID:** BC30235</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4fe70-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4fe70-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3cb4b-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3cb4b-109">To correct this error</span></span>  
   
-1. <span data-ttu-id="4fe70-110">Rimuovere la parola chiave non valida dall'istruzione `Dim` .</span><span class="sxs-lookup"><span data-stu-id="4fe70-110">Remove the invalid keyword from the `Dim` statement.</span></span>  
+1. <span data-ttu-id="3cb4b-110">Rimuovere la parola chiave non valida dall'istruzione `Dim` .</span><span class="sxs-lookup"><span data-stu-id="3cb4b-110">Remove the invalid keyword from the `Dim` statement.</span></span>  
   
-2. <span data-ttu-id="4fe70-111">Se è stata dichiarata una variabile `Static` all'esterno di una routine, spostare la dichiarazione all'interno di una routine oppure rimuovere la parola chiave `Static` .</span><span class="sxs-lookup"><span data-stu-id="4fe70-111">If you have declared a `Static` variable outside of a procedure, either move the declaration inside a procedure or remove the `Static` keyword.</span></span>  
+2. <span data-ttu-id="3cb4b-111">Se è stata dichiarata una variabile `Static` all'esterno di una routine, spostare la dichiarazione all'interno di una routine oppure rimuovere la parola chiave `Static` .</span><span class="sxs-lookup"><span data-stu-id="3cb4b-111">If you have declared a `Static` variable outside of a procedure, either move the declaration inside a procedure or remove the `Static` keyword.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4fe70-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4fe70-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="3cb4b-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3cb4b-112">See also</span></span>
 
-- [<span data-ttu-id="4fe70-113">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="4fe70-113">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="3cb4b-113">Istruzione Dim</span><span class="sxs-lookup"><span data-stu-id="3cb4b-113">Dim Statement</span></span>](../language-reference/statements/dim-statement.md)
