--- a/docs/visual-basic/misc/bc30580.md
+++ b/docs/visual-basic/misc/bc30580.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30580
 ms.assetid: 56c6ef4b-28b1-4a62-8afa-d83a7742b507
-ms.openlocfilehash: 8aebc07a60159e5054ffb30597e31a6db9d841f4
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: b9fefb3ef992ce148ef554362ec4867c0e266eb9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664912"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370063"
 ---
-# <a name="externalsource-directives-cannot-be-nested"></a><span data-ttu-id="edadc-102">Le direttive di '#ExternalSource' non possono essere annidate</span><span class="sxs-lookup"><span data-stu-id="edadc-102">'#ExternalSource' directives cannot be nested</span></span>
-<span data-ttu-id="edadc-103">Si è provato a posizionare una direttiva `#ExternalSource` all'interno di un altro blocco `#ExternalSource` .</span><span class="sxs-lookup"><span data-stu-id="edadc-103">You attempted to place an `#ExternalSource` directive within another `#ExternalSource` block.</span></span> <span data-ttu-id="edadc-104">La direttiva `#ExternalSource` fa riferimento al codice esterno, permettendo al compilatore di segnalare con precisione le eccezioni che si verificano all'interno di tale codice.</span><span class="sxs-lookup"><span data-stu-id="edadc-104">The `#ExternalSource` directive references outside code, enabling the compiler to accurately report when exceptions occur within that code.</span></span>  
+# <a name="externalsource-directives-cannot-be-nested"></a><span data-ttu-id="dfb9f-102">Le direttive di '#ExternalSource' non possono essere annidate</span><span class="sxs-lookup"><span data-stu-id="dfb9f-102">'#ExternalSource' directives cannot be nested</span></span>
+<span data-ttu-id="dfb9f-103">Si è provato a posizionare una direttiva `#ExternalSource` all'interno di un altro blocco `#ExternalSource` .</span><span class="sxs-lookup"><span data-stu-id="dfb9f-103">You attempted to place an `#ExternalSource` directive within another `#ExternalSource` block.</span></span> <span data-ttu-id="dfb9f-104">La direttiva `#ExternalSource` fa riferimento al codice esterno, permettendo al compilatore di segnalare con precisione le eccezioni che si verificano all'interno di tale codice.</span><span class="sxs-lookup"><span data-stu-id="dfb9f-104">The `#ExternalSource` directive references outside code, enabling the compiler to accurately report when exceptions occur within that code.</span></span>  
   
- <span data-ttu-id="edadc-105">I blocchi`#ExternalSource` non possono essere annidati all'interno di altri blocchi `#ExternalSource` .</span><span class="sxs-lookup"><span data-stu-id="edadc-105">`#ExternalSource` blocks cannot be nested within other `#ExternalSource` blocks.</span></span>  
+ <span data-ttu-id="dfb9f-105">I blocchi`#ExternalSource` non possono essere annidati all'interno di altri blocchi `#ExternalSource` .</span><span class="sxs-lookup"><span data-stu-id="dfb9f-105">`#ExternalSource` blocks cannot be nested within other `#ExternalSource` blocks.</span></span>  
   
- <span data-ttu-id="edadc-106">**ID errore:** BC30580</span><span class="sxs-lookup"><span data-stu-id="edadc-106">**Error ID:** BC30580</span></span>  
+ <span data-ttu-id="dfb9f-106">**ID errore:** BC30580</span><span class="sxs-lookup"><span data-stu-id="dfb9f-106">**Error ID:** BC30580</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="edadc-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="edadc-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="dfb9f-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="dfb9f-107">To correct this error</span></span>  
   
-- <span data-ttu-id="edadc-108">Spostare la direttiva `#ExternalSource` interna al di fuori del blocco `#ExternalSource` di inclusione.</span><span class="sxs-lookup"><span data-stu-id="edadc-108">Move the inner `#ExternalSource` directive outside the enclosing `#ExternalSource` block.</span></span>  
+- <span data-ttu-id="dfb9f-108">Spostare la direttiva `#ExternalSource` interna al di fuori del blocco `#ExternalSource` di inclusione.</span><span class="sxs-lookup"><span data-stu-id="dfb9f-108">Move the inner `#ExternalSource` directive outside the enclosing `#ExternalSource` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="edadc-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="edadc-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="dfb9f-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="dfb9f-109">See also</span></span>
 
-- [<span data-ttu-id="edadc-110">Direttiva #ExternalSource</span><span class="sxs-lookup"><span data-stu-id="edadc-110">#ExternalSource Directive</span></span>](../../visual-basic/language-reference/directives/externalsource-directive.md)
-- [<span data-ttu-id="edadc-111">Compilazione condizionale in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="edadc-111">Conditional compilation in Visual Basic</span></span>](../programming-guide/program-structure/conditional-compilation.md)
+- [<span data-ttu-id="dfb9f-110">#ExternalSource (direttiva)</span><span class="sxs-lookup"><span data-stu-id="dfb9f-110">#ExternalSource Directive</span></span>](../language-reference/directives/externalsource-directive.md)
+- [<span data-ttu-id="dfb9f-111">Compilazione condizionale in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="dfb9f-111">Conditional compilation in Visual Basic</span></span>](../programming-guide/program-structure/conditional-compilation.md)
