--- a/docs/visual-basic/misc/bc30584.md
+++ b/docs/visual-basic/misc/bc30584.md
@@ -1,5 +1,5 @@
 ---
-title: "'<type>' non può essere ereditato più di una volta"
+title: "' <type> ' non può essere ereditato più di una volta"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30584
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30584
 ms.assetid: c05261ad-5b0f-4fe8-a4e6-c76d8bc2b3ad
-ms.openlocfilehash: 19cae96d38cdaf2b4ddbd9c2529fcff8db4fccc4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: be33337669345a9ad30861b2b949d112a1ef8e6c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620839"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369907"
 ---
-# <a name="type-cannot-be-inherited-more-than-once"></a><span data-ttu-id="54719-102">'\<tipo >' non può essere ereditato più di una volta</span><span class="sxs-lookup"><span data-stu-id="54719-102">'\<type>' cannot be inherited more than once</span></span>
-<span data-ttu-id="54719-103">Un'istruzione `Inherits` è stata duplicata.</span><span class="sxs-lookup"><span data-stu-id="54719-103">You have duplicated an `Inherits` statement.</span></span>  
+# <a name="type-cannot-be-inherited-more-than-once"></a><span data-ttu-id="1635b-102">' \<type> ' non può essere ereditato più di una volta</span><span class="sxs-lookup"><span data-stu-id="1635b-102">'\<type>' cannot be inherited more than once</span></span>
+<span data-ttu-id="1635b-103">Un'istruzione `Inherits` è stata duplicata.</span><span class="sxs-lookup"><span data-stu-id="1635b-103">You have duplicated an `Inherits` statement.</span></span>  
   
- <span data-ttu-id="54719-104">**ID errore:** BC30584</span><span class="sxs-lookup"><span data-stu-id="54719-104">**Error ID:** BC30584</span></span>  
+ <span data-ttu-id="1635b-104">**ID errore:** BC30584</span><span class="sxs-lookup"><span data-stu-id="1635b-104">**Error ID:** BC30584</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="54719-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="54719-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1635b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1635b-105">To correct this error</span></span>  
   
-- <span data-ttu-id="54719-106">Rimuovere l'istruzione `Inherits` ridondante.</span><span class="sxs-lookup"><span data-stu-id="54719-106">Remove the redundant `Inherits` statement.</span></span>  
+- <span data-ttu-id="1635b-106">Rimuovere l'istruzione `Inherits` ridondante.</span><span class="sxs-lookup"><span data-stu-id="1635b-106">Remove the redundant `Inherits` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="54719-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="54719-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1635b-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1635b-107">See also</span></span>
 
-- [<span data-ttu-id="54719-108">Istruzione Inherits</span><span class="sxs-lookup"><span data-stu-id="54719-108">Inherits Statement</span></span>](../../visual-basic/language-reference/statements/inherits-statement.md)
+- [<span data-ttu-id="1635b-108">Inherits Statement</span><span class="sxs-lookup"><span data-stu-id="1635b-108">Inherits Statement</span></span>](../language-reference/statements/inherits-statement.md)
