--- a/docs/visual-basic/misc/bc30587.md
+++ b/docs/visual-basic/misc/bc30587.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30587
 ms.assetid: aff179af-96f2-4157-971e-881d8e08f5f2
-ms.openlocfilehash: 49df2c7a6a7a026ee7a15d74a2f5989fadcbbfbd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c835ac171894f76bc67cece9d4523cd94584e72b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620358"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369881"
 ---
-# <a name="named-argument-cannot-match-a-paramarray-parameter"></a><span data-ttu-id="99fea-102">L'argomento denominato non può corrispondere a un parametro ParamArray</span><span class="sxs-lookup"><span data-stu-id="99fea-102">Named argument cannot match a ParamArray parameter</span></span>
-<span data-ttu-id="99fea-103">È stato fornito un argomento denominato, specificato con il nome dichiarato dell'argomento, seguito da due punti (:) e dal segno di uguale e quindi dal valore dell'argomento. Non è invece possibile passare una matrice di parametri per nome.</span><span class="sxs-lookup"><span data-stu-id="99fea-103">You have supplied a named argument (specified with the argument's declared name followed by a colon and an equal sign, followed by the argument value); however you cannot pass a parameter array by name.</span></span> <span data-ttu-id="99fea-104">Quando si chiama la routine, si fornisce un numero indefinito di argomenti delimitati da virgole per la matrice di parametri e il compilatore non può associare più argomenti con lo stesso nome.</span><span class="sxs-lookup"><span data-stu-id="99fea-104">When you call the procedure, you supply an indefinite number of comma-separated arguments for the parameter array, and the compiler cannot associate more than one argument with a single name.</span></span>  
+# <a name="named-argument-cannot-match-a-paramarray-parameter"></a><span data-ttu-id="8cd5e-102">L'argomento denominato non può corrispondere a un parametro ParamArray</span><span class="sxs-lookup"><span data-stu-id="8cd5e-102">Named argument cannot match a ParamArray parameter</span></span>
+<span data-ttu-id="8cd5e-103">È stato fornito un argomento denominato, specificato con il nome dichiarato dell'argomento, seguito da due punti (:) e dal segno di uguale e quindi dal valore dell'argomento. Non è invece possibile passare una matrice di parametri per nome.</span><span class="sxs-lookup"><span data-stu-id="8cd5e-103">You have supplied a named argument (specified with the argument's declared name followed by a colon and an equal sign, followed by the argument value); however you cannot pass a parameter array by name.</span></span> <span data-ttu-id="8cd5e-104">Quando si chiama la routine, si fornisce un numero indefinito di argomenti delimitati da virgole per la matrice di parametri e il compilatore non può associare più argomenti con lo stesso nome.</span><span class="sxs-lookup"><span data-stu-id="8cd5e-104">When you call the procedure, you supply an indefinite number of comma-separated arguments for the parameter array, and the compiler cannot associate more than one argument with a single name.</span></span>  
   
- <span data-ttu-id="99fea-105">**ID errore:** BC30587</span><span class="sxs-lookup"><span data-stu-id="99fea-105">**Error ID:** BC30587</span></span>  
+ <span data-ttu-id="8cd5e-105">**ID errore:** BC30587</span><span class="sxs-lookup"><span data-stu-id="8cd5e-105">**Error ID:** BC30587</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="99fea-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="99fea-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8cd5e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8cd5e-106">To correct this error</span></span>  
   
-- <span data-ttu-id="99fea-107">Passare l'argomento per posizione, anziché per nome.</span><span class="sxs-lookup"><span data-stu-id="99fea-107">Pass the argument by position, rather than by name.</span></span>  
+- <span data-ttu-id="8cd5e-107">Passare l'argomento per posizione, anziché per nome.</span><span class="sxs-lookup"><span data-stu-id="8cd5e-107">Pass the argument by position, rather than by name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="99fea-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="99fea-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8cd5e-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8cd5e-108">See also</span></span>
 
-- [<span data-ttu-id="99fea-109">ParamArray</span><span class="sxs-lookup"><span data-stu-id="99fea-109">ParamArray</span></span>](../../visual-basic/language-reference/modifiers/paramarray.md)
-- [<span data-ttu-id="99fea-110">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="99fea-110">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [<span data-ttu-id="8cd5e-109">ParamArray</span><span class="sxs-lookup"><span data-stu-id="8cd5e-109">ParamArray</span></span>](../language-reference/modifiers/paramarray.md)
+- [<span data-ttu-id="8cd5e-110">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="8cd5e-110">Passing Arguments by Position and by Name</span></span>](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
