--- a/docs/visual-basic/misc/bc32201.md
+++ b/docs/visual-basic/misc/bc32201.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32201
 ms.assetid: ea720bc3-51e8-45fb-874c-f8cec9a250ad
-ms.openlocfilehash: 5639e3206b8340ce6dd22c47e41b83d6302ebf7a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d9ba5632859dd51abe2bb78a2ca16ffd796a8856
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64651257"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379835"
 ---
-# <a name="property-parameters-cannot-have-the-name-value"></a><span data-ttu-id="d05ee-102">I parametri di proprietà non possono avere il nome 'Value'</span><span class="sxs-lookup"><span data-stu-id="d05ee-102">Property parameters cannot have the name 'Value'</span></span>
-<span data-ttu-id="d05ee-103">Un parametro in un'istruzione `Property` è denominato `Value`.</span><span class="sxs-lookup"><span data-stu-id="d05ee-103">A parameter in a `Property` statement is named `Value`.</span></span> <span data-ttu-id="d05ee-104">Questo nome è riservato all'interno di una definizione di proprietà per il nuovo valore assegnato alla proprietà nella routine `Set` .</span><span class="sxs-lookup"><span data-stu-id="d05ee-104">This name is reserved within a property definition for the new value being assigned to the property in the `Set` procedure.</span></span>  
+# <a name="property-parameters-cannot-have-the-name-value"></a><span data-ttu-id="b2839-102">I parametri di proprietà non possono avere il nome 'Value'</span><span class="sxs-lookup"><span data-stu-id="b2839-102">Property parameters cannot have the name 'Value'</span></span>
+<span data-ttu-id="b2839-103">Un parametro in un'istruzione `Property` è denominato `Value`.</span><span class="sxs-lookup"><span data-stu-id="b2839-103">A parameter in a `Property` statement is named `Value`.</span></span> <span data-ttu-id="b2839-104">Questo nome è riservato all'interno di una definizione di proprietà per il nuovo valore assegnato alla proprietà nella routine `Set` .</span><span class="sxs-lookup"><span data-stu-id="b2839-104">This name is reserved within a property definition for the new value being assigned to the property in the `Set` procedure.</span></span>  
   
- <span data-ttu-id="d05ee-105">**ID errore:** BC32201</span><span class="sxs-lookup"><span data-stu-id="d05ee-105">**Error ID:** BC32201</span></span>  
+ <span data-ttu-id="b2839-105">**ID errore:** BC32201</span><span class="sxs-lookup"><span data-stu-id="b2839-105">**Error ID:** BC32201</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d05ee-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d05ee-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b2839-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b2839-106">To correct this error</span></span>  
   
-- <span data-ttu-id="d05ee-107">Modificare il nome del parametro nell'istruzione `Property` .</span><span class="sxs-lookup"><span data-stu-id="d05ee-107">Change the name of the parameter in the `Property` statement.</span></span>  
+- <span data-ttu-id="b2839-107">Modificare il nome del parametro nell'istruzione `Property` .</span><span class="sxs-lookup"><span data-stu-id="b2839-107">Change the name of the parameter in the `Property` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d05ee-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d05ee-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b2839-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b2839-108">See also</span></span>
 
-- [<span data-ttu-id="d05ee-109">Istruzione Set</span><span class="sxs-lookup"><span data-stu-id="d05ee-109">Set Statement</span></span>](../../visual-basic/language-reference/statements/set-statement.md)
-- [<span data-ttu-id="d05ee-110">Routine Property</span><span class="sxs-lookup"><span data-stu-id="d05ee-110">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="b2839-109">Istruzione set</span><span class="sxs-lookup"><span data-stu-id="b2839-109">Set Statement</span></span>](../language-reference/statements/set-statement.md)
+- [<span data-ttu-id="b2839-110">Routine Property</span><span class="sxs-lookup"><span data-stu-id="b2839-110">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
