--- a/docs/visual-basic/misc/bc33002.md
+++ b/docs/visual-basic/misc/bc33002.md
@@ -7,36 +7,36 @@ f1_keywords:
 helpviewer_keywords:
 - BC33002
 ms.assetid: 8628ea42-57d8-41ca-8bdc-5e4c27be543e
-ms.openlocfilehash: c16956fabe86e4f7f34e272619c2dd0815540d78
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 8da1e6687829a97bd094484eff6b424b3395b88e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61802856"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385587"
 ---
-# <a name="operator-is-not-overloadable"></a><span data-ttu-id="d60c2-102">L'operatore non supporta l'overload</span><span class="sxs-lookup"><span data-stu-id="d60c2-102">Operator is not overloadable</span></span>
-<span data-ttu-id="d60c2-103">Solo determinati operatori sono idonei per l'overload.</span><span class="sxs-lookup"><span data-stu-id="d60c2-103">Only certain operators are eligible for overloading.</span></span> <span data-ttu-id="d60c2-104">La tabella seguente elenca gli operatori che è possibile definire.</span><span class="sxs-lookup"><span data-stu-id="d60c2-104">The following table lists the operators you can define.</span></span>  
+# <a name="operator-is-not-overloadable"></a><span data-ttu-id="0f98f-102">L'operatore non supporta l'overload</span><span class="sxs-lookup"><span data-stu-id="0f98f-102">Operator is not overloadable</span></span>
+<span data-ttu-id="0f98f-103">Solo determinati operatori sono idonei per l'overload.</span><span class="sxs-lookup"><span data-stu-id="0f98f-103">Only certain operators are eligible for overloading.</span></span> <span data-ttu-id="0f98f-104">La tabella seguente elenca gli operatori che è possibile definire.</span><span class="sxs-lookup"><span data-stu-id="0f98f-104">The following table lists the operators you can define.</span></span>  
   
-|<span data-ttu-id="d60c2-105">Tipo</span><span class="sxs-lookup"><span data-stu-id="d60c2-105">Type</span></span>|<span data-ttu-id="d60c2-106">Operatori</span><span class="sxs-lookup"><span data-stu-id="d60c2-106">Operators</span></span>|  
+|<span data-ttu-id="0f98f-105">Type</span><span class="sxs-lookup"><span data-stu-id="0f98f-105">Type</span></span>|<span data-ttu-id="0f98f-106">Operatori</span><span class="sxs-lookup"><span data-stu-id="0f98f-106">Operators</span></span>|  
 |----------|---------------|  
-|<span data-ttu-id="d60c2-107">Unario</span><span class="sxs-lookup"><span data-stu-id="d60c2-107">Unary</span></span>|<span data-ttu-id="d60c2-108">`+`, `-`, `IsFalse`, `IsTrue`, `Not`</span><span class="sxs-lookup"><span data-stu-id="d60c2-108">`+`, `-`, `IsFalse`, `IsTrue`, `Not`</span></span>|  
-|<span data-ttu-id="d60c2-109">Binario</span><span class="sxs-lookup"><span data-stu-id="d60c2-109">Binary</span></span>|<span data-ttu-id="d60c2-110">`+`, `-`, `*`, `/`, `\`, `&`, `^`, `>>`, `<<`, `=`, `<>`, `>`, `>=`, `<`, `<=`, `And`, `Like`, `Mod`, `Or`, `Xor`</span><span class="sxs-lookup"><span data-stu-id="d60c2-110">`+`, `-`, `*`, `/`, `\`, `&`, `^`, `>>`, `<<`, `=`, `<>`, `>`, `>=`, `<`, `<=`, `And`, `Like`, `Mod`, `Or`, `Xor`</span></span>|  
-|<span data-ttu-id="d60c2-111">Conversione (unario)</span><span class="sxs-lookup"><span data-stu-id="d60c2-111">Conversion (unary)</span></span>|`CType`|  
+|<span data-ttu-id="0f98f-107">Unaria</span><span class="sxs-lookup"><span data-stu-id="0f98f-107">Unary</span></span>|<span data-ttu-id="0f98f-108">`+`, `-`, `IsFalse`, `IsTrue`, `Not`</span><span class="sxs-lookup"><span data-stu-id="0f98f-108">`+`, `-`, `IsFalse`, `IsTrue`, `Not`</span></span>|  
+|<span data-ttu-id="0f98f-109">Binario</span><span class="sxs-lookup"><span data-stu-id="0f98f-109">Binary</span></span>|<span data-ttu-id="0f98f-110">`+`, `-`, `*`, `/`, `\`, `&`, `^`, `>>`, `<<`, `=`, `<>`, `>`, `>=`, `<`, `<=`, `And`, `Like`, `Mod`, `Or`, `Xor`</span><span class="sxs-lookup"><span data-stu-id="0f98f-110">`+`, `-`, `*`, `/`, `\`, `&`, `^`, `>>`, `<<`, `=`, `<>`, `>`, `>=`, `<`, `<=`, `And`, `Like`, `Mod`, `Or`, `Xor`</span></span>|  
+|<span data-ttu-id="0f98f-111">Conversione (unario)</span><span class="sxs-lookup"><span data-stu-id="0f98f-111">Conversion (unary)</span></span>|`CType`|  
   
- <span data-ttu-id="d60c2-112">Si noti che l'operatore `=` nell'elenco binario è l'operatore di confronto, non l'operatore di assegnazione.</span><span class="sxs-lookup"><span data-stu-id="d60c2-112">Notice that the `=` operator in the binary list is the comparison operator, not the assignment operator.</span></span>  
+ <span data-ttu-id="0f98f-112">Si noti che l'operatore `=` nell'elenco binario è l'operatore di confronto, non l'operatore di assegnazione.</span><span class="sxs-lookup"><span data-stu-id="0f98f-112">Notice that the `=` operator in the binary list is the comparison operator, not the assignment operator.</span></span>  
   
- <span data-ttu-id="d60c2-113">**ID errore:** BC33002</span><span class="sxs-lookup"><span data-stu-id="d60c2-113">**Error ID:** BC33002</span></span>  
+ <span data-ttu-id="0f98f-113">**ID errore:** BC33002</span><span class="sxs-lookup"><span data-stu-id="0f98f-113">**Error ID:** BC33002</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d60c2-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d60c2-114">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0f98f-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0f98f-114">To correct this error</span></span>  
   
-1. <span data-ttu-id="d60c2-115">Selezionare un operatore dal set di operatori che supportano l'overload.</span><span class="sxs-lookup"><span data-stu-id="d60c2-115">Select an operator from the set of overloadable operators.</span></span>  
+1. <span data-ttu-id="0f98f-115">Selezionare un operatore dal set di operatori che supportano l'overload.</span><span class="sxs-lookup"><span data-stu-id="0f98f-115">Select an operator from the set of overloadable operators.</span></span>  
   
-2. <span data-ttu-id="d60c2-116">Se è necessario eseguire l'overload di un operatore che non può essere sottoposto a overload direttamente, creare una routine `Function` che accetti i parametri appropriati e restituisca il valore appropriato.</span><span class="sxs-lookup"><span data-stu-id="d60c2-116">If you need the functionality of overloading an operator that you cannot overload directly, create a `Function` procedure that takes the appropriate parameters and returns the appropriate value.</span></span>  
+2. <span data-ttu-id="0f98f-116">Se è necessario eseguire l'overload di un operatore che non può essere sottoposto a overload direttamente, creare una routine `Function` che accetti i parametri appropriati e restituisca il valore appropriato.</span><span class="sxs-lookup"><span data-stu-id="0f98f-116">If you need the functionality of overloading an operator that you cannot overload directly, create a `Function` procedure that takes the appropriate parameters and returns the appropriate value.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d60c2-117">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d60c2-117">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0f98f-117">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0f98f-117">See also</span></span>
 
-- [<span data-ttu-id="d60c2-118">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="d60c2-118">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="d60c2-119">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="d60c2-119">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="d60c2-120">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="d60c2-120">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="d60c2-121">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="d60c2-121">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
-- [<span data-ttu-id="d60c2-122">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="d60c2-122">Function Statement</span></span>](../../visual-basic/language-reference/statements/function-statement.md)
+- [<span data-ttu-id="0f98f-118">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="0f98f-118">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="0f98f-119">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="0f98f-119">Operator Procedures</span></span>](../programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="0f98f-120">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="0f98f-120">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="0f98f-121">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="0f98f-121">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="0f98f-122">Istruzione Function</span><span class="sxs-lookup"><span data-stu-id="0f98f-122">Function Statement</span></span>](../language-reference/statements/function-statement.md)
