--- a/docs/visual-basic/misc/bc33038.md
+++ b/docs/visual-basic/misc/bc33038.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>'deve definire l'operatore'<operator>' da usare in un'istruzione 'For'
+title: Il tipo '<typename>' deve definire l'operatore '<operator>' per poter essere usato in un'istruzione 'For'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33038
@@ -7,45 +7,45 @@ f1_keywords:
 helpviewer_keywords:
 - BC33038
 ms.assetid: b1c9d87f-80f9-4c8c-8908-f8400b9fe4c5
-ms.openlocfilehash: 735dce0277be94c4819eac6e1710848125393c75
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 36c220fb7cf8f648cb08bab189f0541469087dc6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626573"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379627"
 ---
-# <a name="type-typename-must-define-operator-operator-to-be-used-in-a-for-statement"></a><span data-ttu-id="5c157-102">Tipo '\<nomeTipo >' deve definire l'operatore '\<operatore >' da usare in un'istruzione 'For'</span><span class="sxs-lookup"><span data-stu-id="5c157-102">Type '\<typename>' must define operator '\<operator>' to be used in a 'For' statement</span></span>
-<span data-ttu-id="5c157-103">Un ciclo `For` specifica una variabile contatore di un tipo che non supporta un operatore richiesto.</span><span class="sxs-lookup"><span data-stu-id="5c157-103">A `For` loop specifies a counter variable of a type that does not support a required operator.</span></span>  
+# <a name="type-typename-must-define-operator-operator-to-be-used-in-a-for-statement"></a><span data-ttu-id="72c6f-102">Il tipo '\<typename>' deve definire l'operatore '\<operator>' per poter essere usato in un'istruzione 'For'</span><span class="sxs-lookup"><span data-stu-id="72c6f-102">Type '\<typename>' must define operator '\<operator>' to be used in a 'For' statement</span></span>
+<span data-ttu-id="72c6f-103">Un ciclo `For` specifica una variabile contatore di un tipo che non supporta un operatore richiesto.</span><span class="sxs-lookup"><span data-stu-id="72c6f-103">A `For` loop specifies a counter variable of a type that does not support a required operator.</span></span>  
   
- <span data-ttu-id="5c157-104">La variabile contatore in un ciclo `For` può essere di un qualsiasi tipo di dati che supporti tutti gli operatori elencati di seguito:</span><span class="sxs-lookup"><span data-stu-id="5c157-104">The counter variable in a `For` loop can be of any data type that supports all of the following operators:</span></span>  
+ <span data-ttu-id="72c6f-104">La variabile contatore in un ciclo `For` può essere di un qualsiasi tipo di dati che supporti tutti gli operatori elencati di seguito:</span><span class="sxs-lookup"><span data-stu-id="72c6f-104">The counter variable in a `For` loop can be of any data type that supports all of the following operators:</span></span>  
   
-- <span data-ttu-id="5c157-105">Maggiore o uguale a (`>=`)</span><span class="sxs-lookup"><span data-stu-id="5c157-105">Greater than or equal (`>=`)</span></span>  
+- <span data-ttu-id="72c6f-105">Maggiore o uguale a (`>=`)</span><span class="sxs-lookup"><span data-stu-id="72c6f-105">Greater than or equal (`>=`)</span></span>  
   
-- <span data-ttu-id="5c157-106">Minore o uguale a (`<=`)</span><span class="sxs-lookup"><span data-stu-id="5c157-106">Less than or equal (`<=`)</span></span>  
+- <span data-ttu-id="72c6f-106">Minore o uguale a (`<=`)</span><span class="sxs-lookup"><span data-stu-id="72c6f-106">Less than or equal (`<=`)</span></span>  
   
-- <span data-ttu-id="5c157-107">Addizione (`+`)</span><span class="sxs-lookup"><span data-stu-id="5c157-107">Addition (`+`)</span></span>  
+- <span data-ttu-id="72c6f-107">Addizione (`+`)</span><span class="sxs-lookup"><span data-stu-id="72c6f-107">Addition (`+`)</span></span>  
   
-- <span data-ttu-id="5c157-108">Sottrazione (`-`)</span><span class="sxs-lookup"><span data-stu-id="5c157-108">Subtraction (`-`)</span></span>  
+- <span data-ttu-id="72c6f-108">Sottrazione (`-`)</span><span class="sxs-lookup"><span data-stu-id="72c6f-108">Subtraction (`-`)</span></span>  
   
- <span data-ttu-id="5c157-109">Se si usa un tipo di dati numerico per la variabile contatore, sono supportati tutti gli operatori precedenti.</span><span class="sxs-lookup"><span data-stu-id="5c157-109">If you use a numeric data type for the counter variable, all the preceding operators are supported.</span></span> <span data-ttu-id="5c157-110">Se si usa una classe o una struttura definita dall'utente, è necessario definire tutti gli operatori precedenti in quella classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="5c157-110">If you use a user-defined class or structure, you must define all the preceding operators on that class or structure.</span></span>  
+ <span data-ttu-id="72c6f-109">Se si usa un tipo di dati numerico per la variabile contatore, sono supportati tutti gli operatori precedenti.</span><span class="sxs-lookup"><span data-stu-id="72c6f-109">If you use a numeric data type for the counter variable, all the preceding operators are supported.</span></span> <span data-ttu-id="72c6f-110">Se si usa una classe o una struttura definita dall'utente, è necessario definire tutti gli operatori precedenti in quella classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="72c6f-110">If you use a user-defined class or structure, you must define all the preceding operators on that class or structure.</span></span>  
   
- <span data-ttu-id="5c157-111">Si noti inoltre che è necessario che i tipi di dati delle espressioni `start`, `end`e `step` nell'istruzione `For` vengano ampliati al tipo di dati della variabile contatore.</span><span class="sxs-lookup"><span data-stu-id="5c157-111">Note also that the data types of the `start`, `end`, and `step` expressions in the `For` statement must widen to the data type of the counter variable.</span></span> <span data-ttu-id="5c157-112">Se la variabile contatore è una classe o struttura definita dall'utente e l'espressione `start`, `end`o `step` è di un tipo diverso, sarà necessario definire l'operatore di conversione `CType` per portare a termine la conversione necessaria.</span><span class="sxs-lookup"><span data-stu-id="5c157-112">If the counter variable is a user-defined class or structure and the `start`, `end`, or `step` expression is of a different type, you must define the `CType` conversion operator to accomplish the necessary conversion.</span></span>  
+ <span data-ttu-id="72c6f-111">Si noti inoltre che è necessario che i tipi di dati delle espressioni `start`, `end`e `step` nell'istruzione `For` vengano ampliati al tipo di dati della variabile contatore.</span><span class="sxs-lookup"><span data-stu-id="72c6f-111">Note also that the data types of the `start`, `end`, and `step` expressions in the `For` statement must widen to the data type of the counter variable.</span></span> <span data-ttu-id="72c6f-112">Se la variabile contatore è una classe o struttura definita dall'utente e l'espressione `start`, `end`o `step` è di un tipo diverso, sarà necessario definire l'operatore di conversione `CType` per portare a termine la conversione necessaria.</span><span class="sxs-lookup"><span data-stu-id="72c6f-112">If the counter variable is a user-defined class or structure and the `start`, `end`, or `step` expression is of a different type, you must define the `CType` conversion operator to accomplish the necessary conversion.</span></span>  
   
- <span data-ttu-id="5c157-113">**ID errore:** BC33038</span><span class="sxs-lookup"><span data-stu-id="5c157-113">**Error ID:** BC33038</span></span>  
+ <span data-ttu-id="72c6f-113">**ID errore:** BC33038</span><span class="sxs-lookup"><span data-stu-id="72c6f-113">**Error ID:** BC33038</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5c157-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5c157-114">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="72c6f-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="72c6f-114">To correct this error</span></span>  
   
-1. <span data-ttu-id="5c157-115">Accertarsi che il tipo di dati della variabile contatore sia stato digitato in maniera corretta.</span><span class="sxs-lookup"><span data-stu-id="5c157-115">Make sure the spelling of the counter-variable data type is correct.</span></span>  
+1. <span data-ttu-id="72c6f-115">Accertarsi che il tipo di dati della variabile contatore sia stato digitato in maniera corretta.</span><span class="sxs-lookup"><span data-stu-id="72c6f-115">Make sure the spelling of the counter-variable data type is correct.</span></span>  
   
-2. <span data-ttu-id="5c157-116">Se per la variabile contatore si usa una classe o una struttura definita dall'utente, definire tutti gli operatori richiesti in quella classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="5c157-116">If you are using a user-defined class or structure for the counter variable, define all the required operators on that class or structure.</span></span>  
+2. <span data-ttu-id="72c6f-116">Se per la variabile contatore si usa una classe o una struttura definita dall'utente, definire tutti gli operatori richiesti in quella classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="72c6f-116">If you are using a user-defined class or structure for the counter variable, define all the required operators on that class or structure.</span></span>  
   
-3. <span data-ttu-id="5c157-117">In base ai tipi di dati delle espressioni `start`, `end`e `step` potrebbe essere necessario definire uno o più operatori di conversione `CType` per convertirle nel tipo di dati della variabile contatore.</span><span class="sxs-lookup"><span data-stu-id="5c157-117">Depending on the data types of the `start`, `end`, and `step` expressions, you might have to define one or more `CType` conversion operators to convert them to the counter variable data type.</span></span>  
+3. <span data-ttu-id="72c6f-117">In base ai tipi di dati delle espressioni `start`, `end`e `step` potrebbe essere necessario definire uno o più operatori di conversione `CType` per convertirle nel tipo di dati della variabile contatore.</span><span class="sxs-lookup"><span data-stu-id="72c6f-117">Depending on the data types of the `start`, `end`, and `step` expressions, you might have to define one or more `CType` conversion operators to convert them to the counter variable data type.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5c157-118">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5c157-118">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="72c6f-118">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="72c6f-118">See also</span></span>
 
-- [<span data-ttu-id="5c157-119">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="5c157-119">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)
-- [<span data-ttu-id="5c157-120">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="5c157-120">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="5c157-121">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="5c157-121">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="5c157-122">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="5c157-122">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="5c157-123">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="5c157-123">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
-- [<span data-ttu-id="5c157-124">Funzione CType</span><span class="sxs-lookup"><span data-stu-id="5c157-124">CType Function</span></span>](../../visual-basic/language-reference/functions/ctype-function.md)
+- [<span data-ttu-id="72c6f-119">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="72c6f-119">For...Next Statement</span></span>](../language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="72c6f-120">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="72c6f-120">Operator Procedures</span></span>](../programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="72c6f-121">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="72c6f-121">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="72c6f-122">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="72c6f-122">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="72c6f-123">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="72c6f-123">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="72c6f-124">CType Function</span><span class="sxs-lookup"><span data-stu-id="72c6f-124">CType Function</span></span>](../language-reference/functions/ctype-function.md)
