--- a/docs/visual-basic/misc/bc33040.md
+++ b/docs/visual-basic/misc/bc33040.md
@@ -1,5 +1,5 @@
 ---
-title: Tipi di parametro di '<operator>'deve essere'<typename>' da usare in un'istruzione 'For'
+title: I tipi di parametro di '<operator>' devono essere '<typename>' per poter essere usati in un'istruzione 'For'
 ms.date: 07/20/2015
 f1_keywords:
 - BC33040
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC33040
 ms.assetid: bffbb812-0d69-47e4-96c5-01882722ccdb
-ms.openlocfilehash: 4a386ab9631729fc5b9ab8196c78ea03d33a54fc
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 5b49459d94868844b1c3cc5ac343d37b2ffc18a3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61761871"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379510"
 ---
-# <a name="parameter-types-of-operator-must-be-typename-to-be-used-in-a-for-statement"></a><span data-ttu-id="a7a27-102">Tipi di parametro di '\<operatore >' deve essere '\<nomeTipo >' da usare in un'istruzione 'For'</span><span class="sxs-lookup"><span data-stu-id="a7a27-102">Parameter types of '\<operator>' must be '\<typename>' to be used in a 'For' statement</span></span>
-<span data-ttu-id="a7a27-103">Un ciclo `For` specifica una variabile contatore di un tipo che non definisce l'operatore `>=` o `<=` con i parametri del suo stesso tipo.</span><span class="sxs-lookup"><span data-stu-id="a7a27-103">A `For` loop specifies a counter variable of a type that does not define the `>=` or `<=` operator with parameters of its own type.</span></span>  
+# <a name="parameter-types-of-operator-must-be-typename-to-be-used-in-a-for-statement"></a><span data-ttu-id="0d842-102">I tipi di parametro di '\<operator>' devono essere '\<typename>' per poter essere usati in un'istruzione 'For'</span><span class="sxs-lookup"><span data-stu-id="0d842-102">Parameter types of '\<operator>' must be '\<typename>' to be used in a 'For' statement</span></span>
+<span data-ttu-id="0d842-103">Un ciclo `For` specifica una variabile contatore di un tipo che non definisce l'operatore `>=` o `<=` con i parametri del suo stesso tipo.</span><span class="sxs-lookup"><span data-stu-id="0d842-103">A `For` loop specifies a counter variable of a type that does not define the `>=` or `<=` operator with parameters of its own type.</span></span>  
   
- <span data-ttu-id="a7a27-104">È necessario che la variabile contatore sia di un tipo che supporta operatori maggiori di o uguali a (`>=`) e meno di o uguali a (`<=`) che confrontano il loro tipo contenente.</span><span class="sxs-lookup"><span data-stu-id="a7a27-104">The counter variable must be of a type that supports greater-than-or-equal (`>=`) and less-than-or-equal (`<=`) operators that compare their containing type.</span></span> <span data-ttu-id="a7a27-105">Ciò significa che entrambi gli operandi devono essere del tipo della variabile contatore.</span><span class="sxs-lookup"><span data-stu-id="a7a27-105">This means both of the operands must be of the type of the counter variable.</span></span>  
+ <span data-ttu-id="0d842-104">È necessario che la variabile contatore sia di un tipo che supporta operatori maggiori di o uguali a (`>=`) e meno di o uguali a (`<=`) che confrontano il loro tipo contenente.</span><span class="sxs-lookup"><span data-stu-id="0d842-104">The counter variable must be of a type that supports greater-than-or-equal (`>=`) and less-than-or-equal (`<=`) operators that compare their containing type.</span></span> <span data-ttu-id="0d842-105">Ciò significa che entrambi gli operandi devono essere del tipo della variabile contatore.</span><span class="sxs-lookup"><span data-stu-id="0d842-105">This means both of the operands must be of the type of the counter variable.</span></span>  
   
- <span data-ttu-id="a7a27-106">Se si usa un tipo di dati numerico per la variabile contatore, gli operatori `>=` e `<=` sono supportati nel tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="a7a27-106">If you use a numeric data type for the counter variable, the `>=` and `<=` operators are supported on the containing type.</span></span> <span data-ttu-id="a7a27-107">Se si usa una classe o una struttura definita dall'utente, è necessario definire entrambi gli operatori con operandi del tipo di classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="a7a27-107">If you use a user-defined class or structure, you must define both operators with operands of the type of your class or structure.</span></span>  
+ <span data-ttu-id="0d842-106">Se si usa un tipo di dati numerico per la variabile contatore, gli operatori `>=` e `<=` sono supportati nel tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="0d842-106">If you use a numeric data type for the counter variable, the `>=` and `<=` operators are supported on the containing type.</span></span> <span data-ttu-id="0d842-107">Se si usa una classe o una struttura definita dall'utente, è necessario definire entrambi gli operatori con operandi del tipo di classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="0d842-107">If you use a user-defined class or structure, you must define both operators with operands of the type of your class or structure.</span></span>  
   
- <span data-ttu-id="a7a27-108">**ID errore:** BC33040</span><span class="sxs-lookup"><span data-stu-id="a7a27-108">**Error ID:** BC33040</span></span>  
+ <span data-ttu-id="0d842-108">**ID errore:** BC33040</span><span class="sxs-lookup"><span data-stu-id="0d842-108">**Error ID:** BC33040</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a7a27-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a7a27-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0d842-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0d842-109">To correct this error</span></span>  
   
-1. <span data-ttu-id="a7a27-110">Accertarsi che il tipo di dati della variabile contatore sia stato digitato in maniera corretta.</span><span class="sxs-lookup"><span data-stu-id="a7a27-110">Make sure the spelling of the counter-variable data type is correct.</span></span>  
+1. <span data-ttu-id="0d842-110">Accertarsi che il tipo di dati della variabile contatore sia stato digitato in maniera corretta.</span><span class="sxs-lookup"><span data-stu-id="0d842-110">Make sure the spelling of the counter-variable data type is correct.</span></span>  
   
-2. <span data-ttu-id="a7a27-111">Se si usa una classe o una struttura definita dall'utente per la variabile contatore, definire gli operatori `>=` e `<=` che confrontano tale classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="a7a27-111">If you are using a user-defined class or structure for the counter variable, define `>=` and `<=` operators that compare that class or structure.</span></span>  
+2. <span data-ttu-id="0d842-111">Se si usa una classe o una struttura definita dall'utente per la variabile contatore, definire gli operatori `>=` e `<=` che confrontano tale classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="0d842-111">If you are using a user-defined class or structure for the counter variable, define `>=` and `<=` operators that compare that class or structure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a7a27-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a7a27-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0d842-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0d842-112">See also</span></span>
 
-- [<span data-ttu-id="a7a27-113">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="a7a27-113">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)
-- [<span data-ttu-id="a7a27-114">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="a7a27-114">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="a7a27-115">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="a7a27-115">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="a7a27-116">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="a7a27-116">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="a7a27-117">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="a7a27-117">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="0d842-113">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="0d842-113">For...Next Statement</span></span>](../language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="0d842-114">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="0d842-114">Operator Procedures</span></span>](../programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="0d842-115">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="0d842-115">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="0d842-116">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="0d842-116">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="0d842-117">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="0d842-117">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
