--- a/docs/visual-basic/misc/bc36005.md
+++ b/docs/visual-basic/misc/bc36005.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC36005
 ms.assetid: bcebae85-b438-4839-bada-2f8f8dcc8a86
-ms.openlocfilehash: ba99af5f09dcea4f04ac020ea10d0a719193daf4
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d38cd695bbfdc17ac2fbce67b46248ac408fbd5d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61770075"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379251"
 ---
-# <a name="elseif-must-be-preceded-by-a-matching-if-or-elseif"></a><span data-ttu-id="ea36b-102">'ElseIf' deve essere preceduto da un 'If' o 'ElseIf' corrispondente</span><span class="sxs-lookup"><span data-stu-id="ea36b-102">'ElseIf' must be preceded by a matching 'If' or 'ElseIf'</span></span>
-<span data-ttu-id="ea36b-103">Un'istruzione `ElseIf` si verifica senza un'istruzione `If` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="ea36b-103">An `ElseIf` statement occurs without a corresponding `If` statement.</span></span> <span data-ttu-id="ea36b-104">`ElseIf` deve essere preceduto da un'istruzione `If` o da un'altra istruzione `ElseIf` .</span><span class="sxs-lookup"><span data-stu-id="ea36b-104">`ElseIf` must be preceded by an `If` statement or another `ElseIf` statement.</span></span>  
+# <a name="elseif-must-be-preceded-by-a-matching-if-or-elseif"></a><span data-ttu-id="f9e00-102">'ElseIf' deve essere preceduto da un 'If' o 'ElseIf' corrispondente</span><span class="sxs-lookup"><span data-stu-id="f9e00-102">'ElseIf' must be preceded by a matching 'If' or 'ElseIf'</span></span>
+<span data-ttu-id="f9e00-103">Un'istruzione `ElseIf` si verifica senza un'istruzione `If` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="f9e00-103">An `ElseIf` statement occurs without a corresponding `If` statement.</span></span> <span data-ttu-id="f9e00-104">`ElseIf` deve essere preceduto da un'istruzione `If` o da un'altra istruzione `ElseIf` .</span><span class="sxs-lookup"><span data-stu-id="f9e00-104">`ElseIf` must be preceded by an `If` statement or another `ElseIf` statement.</span></span>  
   
- <span data-ttu-id="ea36b-105">**ID errore:** BC36005</span><span class="sxs-lookup"><span data-stu-id="ea36b-105">**Error ID:** BC36005</span></span>  
+ <span data-ttu-id="f9e00-105">**ID errore:** BC36005</span><span class="sxs-lookup"><span data-stu-id="f9e00-105">**Error ID:** BC36005</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ea36b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ea36b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f9e00-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f9e00-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="ea36b-107">Se questo blocco `If` fa parte di un set di strutture di controllo annidate, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="ea36b-107">If this `If` block is part of a set of nested control structures, make sure each structure is properly terminated.</span></span>  
+1. <span data-ttu-id="f9e00-107">Se questo blocco `If` fa parte di un set di strutture di controllo annidate, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="f9e00-107">If this `If` block is part of a set of nested control structures, make sure each structure is properly terminated.</span></span>  
   
-2. <span data-ttu-id="ea36b-108">Verificare che altre strutture di controllo annidate all'interno di questo blocco `If` terminino correttamente.</span><span class="sxs-lookup"><span data-stu-id="ea36b-108">Verify that other control structures nested within this `If` block are properly terminated.</span></span>  
+2. <span data-ttu-id="f9e00-108">Verificare che altre strutture di controllo annidate all'interno di questo blocco `If` terminino correttamente.</span><span class="sxs-lookup"><span data-stu-id="f9e00-108">Verify that other control structures nested within this `If` block are properly terminated.</span></span>  
   
-3. <span data-ttu-id="ea36b-109">Verificare che il blocco `If` sia formattato correttamente.</span><span class="sxs-lookup"><span data-stu-id="ea36b-109">Ensure that this `If` block is correctly formatted.</span></span>  
+3. <span data-ttu-id="f9e00-109">Verificare che il blocco `If` sia formattato correttamente.</span><span class="sxs-lookup"><span data-stu-id="f9e00-109">Ensure that this `If` block is correctly formatted.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ea36b-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ea36b-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f9e00-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f9e00-110">See also</span></span>
 
-- [<span data-ttu-id="ea36b-111">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="ea36b-111">If...Then...Else Statement</span></span>](../../visual-basic/language-reference/statements/if-then-else-statement.md)
-- [<span data-ttu-id="ea36b-112">Strutture decisionali</span><span class="sxs-lookup"><span data-stu-id="ea36b-112">Decision Structures</span></span>](../../visual-basic/programming-guide/language-features/control-flow/decision-structures.md)
+- [<span data-ttu-id="f9e00-111">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="f9e00-111">If...Then...Else Statement</span></span>](../language-reference/statements/if-then-else-statement.md)
+- [<span data-ttu-id="f9e00-112">Strutture decisionali</span><span class="sxs-lookup"><span data-stu-id="f9e00-112">Decision Structures</span></span>](../programming-guide/language-features/control-flow/decision-structures.md)
