--- a/docs/visual-basic/misc/bc36008.md
+++ b/docs/visual-basic/misc/bc36008.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC36008
 ms.assetid: 83269108-b169-40a6-bbcc-af1ac8fcfd67
-ms.openlocfilehash: 432e4f9071239f175d5d2641d4508b8c4f4081b1
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: c06c644dbc2cf64e1f01418eb0421966290186c4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61770058"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379108"
 ---
-# <a name="using-must-end-with-a-matching-end-using"></a><span data-ttu-id="bcc37-102">'Using' deve terminare con un oggetto 'End Using' corrispondente</span><span class="sxs-lookup"><span data-stu-id="bcc37-102">'Using' must end with a matching 'End Using'</span></span>
-<span data-ttu-id="bcc37-103">Un'istruzione `Using` si verifica senza un'istruzione `End Using` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="bcc37-103">A `Using` statement occurs without a corresponding `End Using` statement.</span></span>  
+# <a name="using-must-end-with-a-matching-end-using"></a><span data-ttu-id="d0296-102">'Using' deve terminare con un oggetto 'End Using' corrispondente</span><span class="sxs-lookup"><span data-stu-id="d0296-102">'Using' must end with a matching 'End Using'</span></span>
+<span data-ttu-id="d0296-103">Un'istruzione `Using` si verifica senza un'istruzione `End Using` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="d0296-103">A `Using` statement occurs without a corresponding `End Using` statement.</span></span>  
   
- <span data-ttu-id="bcc37-104">Deve essere usata un'istruzione `End Using` per terminare il blocco `Using` .</span><span class="sxs-lookup"><span data-stu-id="bcc37-104">An `End Using` statement must be used to end the `Using` block.</span></span>  
+ <span data-ttu-id="d0296-104">Deve essere usata un'istruzione `End Using` per terminare il blocco `Using` .</span><span class="sxs-lookup"><span data-stu-id="d0296-104">An `End Using` statement must be used to end the `Using` block.</span></span>  
   
- <span data-ttu-id="bcc37-105">**ID errore:** BC36008</span><span class="sxs-lookup"><span data-stu-id="bcc37-105">**Error ID:** BC36008</span></span>  
+ <span data-ttu-id="d0296-105">**ID errore:** BC36008</span><span class="sxs-lookup"><span data-stu-id="d0296-105">**Error ID:** BC36008</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bcc37-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="bcc37-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d0296-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d0296-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="bcc37-107">Se questo blocco `Using` fa parte di un set di blocchi `Using` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="bcc37-107">If this `Using` block is part of a set of nested `Using` blocks, make sure each block is properly terminated.</span></span>  
+1. <span data-ttu-id="d0296-107">Se questo blocco `Using` fa parte di un set di blocchi `Using` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="d0296-107">If this `Using` block is part of a set of nested `Using` blocks, make sure each block is properly terminated.</span></span>  
   
-2. <span data-ttu-id="bcc37-108">Aggiungere un'istruzione `End Using` alla fine del blocco `Using` .</span><span class="sxs-lookup"><span data-stu-id="bcc37-108">Add an `End Using` statement to the end of the `Using` block.</span></span>  
+2. <span data-ttu-id="d0296-108">Aggiungere un'istruzione `End Using` alla fine del blocco `Using` .</span><span class="sxs-lookup"><span data-stu-id="d0296-108">Add an `End Using` statement to the end of the `Using` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bcc37-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="bcc37-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d0296-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d0296-109">See also</span></span>
 
-- [<span data-ttu-id="bcc37-110">Istruzione Using</span><span class="sxs-lookup"><span data-stu-id="bcc37-110">Using Statement</span></span>](../../visual-basic/language-reference/statements/using-statement.md)
-- [<span data-ttu-id="bcc37-111">Procedura: Eliminare una risorsa di sistema</span><span class="sxs-lookup"><span data-stu-id="bcc37-111">How to: Dispose of a System Resource</span></span>](../../visual-basic/programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
+- [<span data-ttu-id="d0296-110">Istruzione using</span><span class="sxs-lookup"><span data-stu-id="d0296-110">Using Statement</span></span>](../language-reference/statements/using-statement.md)
+- [<span data-ttu-id="d0296-111">Procedura: eliminare una risorsa di sistema</span><span class="sxs-lookup"><span data-stu-id="d0296-111">How to: Dispose of a System Resource</span></span>](../programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
