--- a/docs/visual-basic/misc/bc36533.md
+++ b/docs/visual-basic/misc/bc36533.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro 'ByRef' <parametername> non può essere utilizzato in un'espressione di query
+title: Impossibile usare il parametro 'ByRef' '<parametername>' in un'espressione di query
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36533
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC36533
 ms.assetid: 8067ac87-dd6b-4869-87d0-8a4ce272de41
-ms.openlocfilehash: ae1f389a1e24b0b8518bac31b868751d9ff57ec1
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 3f1e1c238489c035673eb0fb8487edf9eb5504e3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62052066"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378803"
 ---
-# <a name="byref-parameter-parametername-cannot-be-used-in-a-query-expression"></a><span data-ttu-id="647b4-102">Parametro 'ByRef' \<parametername > non può essere utilizzato in un'espressione di query</span><span class="sxs-lookup"><span data-stu-id="647b4-102">'ByRef' parameter \<parametername> cannot be used in a query expression</span></span>
-<span data-ttu-id="647b4-103">Un parametro incluso in una query LINQ è un tipo puntatore.</span><span class="sxs-lookup"><span data-stu-id="647b4-103">A parameter included in a LINQ query is a pointer type.</span></span> <span data-ttu-id="647b4-104">I parametri usati nelle espressioni di query non possono essere passati mediante riferimento.</span><span class="sxs-lookup"><span data-stu-id="647b4-104">Parameters used in query expressions cannot be passed by reference.</span></span>  
+# <a name="byref-parameter-parametername-cannot-be-used-in-a-query-expression"></a><span data-ttu-id="d5359-102">Impossibile usare il parametro 'ByRef' '\<parametername>' in un'espressione di query</span><span class="sxs-lookup"><span data-stu-id="d5359-102">'ByRef' parameter \<parametername> cannot be used in a query expression</span></span>
+<span data-ttu-id="d5359-103">Un parametro incluso in una query LINQ è un tipo puntatore.</span><span class="sxs-lookup"><span data-stu-id="d5359-103">A parameter included in a LINQ query is a pointer type.</span></span> <span data-ttu-id="d5359-104">I parametri usati nelle espressioni di query non possono essere passati mediante riferimento.</span><span class="sxs-lookup"><span data-stu-id="d5359-104">Parameters used in query expressions cannot be passed by reference.</span></span>  
   
- <span data-ttu-id="647b4-105">**ID errore:** BC36533</span><span class="sxs-lookup"><span data-stu-id="647b4-105">**Error ID:** BC36533</span></span>  
+ <span data-ttu-id="d5359-105">**ID errore:** BC36533</span><span class="sxs-lookup"><span data-stu-id="d5359-105">**Error ID:** BC36533</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="647b4-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="647b4-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d5359-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d5359-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="647b4-107">Dichiarare una nuova variabile e assegnare il valore della nuova variabile a una copia del valore che viene passato mediante riferimento.</span><span class="sxs-lookup"><span data-stu-id="647b4-107">Declare a new variable and assign the value of the new variable to a copy of the value that is passed by reference.</span></span> <span data-ttu-id="647b4-108">Usare la variabile copiata nella query LINQ.</span><span class="sxs-lookup"><span data-stu-id="647b4-108">Use the copied variable in the LINQ query.</span></span> <span data-ttu-id="647b4-109">Di seguito è riportato un esempio:</span><span class="sxs-lookup"><span data-stu-id="647b4-109">The following is an example:</span></span>  
+1. <span data-ttu-id="d5359-107">Dichiarare una nuova variabile e assegnare il valore della nuova variabile a una copia del valore che viene passato mediante riferimento.</span><span class="sxs-lookup"><span data-stu-id="d5359-107">Declare a new variable and assign the value of the new variable to a copy of the value that is passed by reference.</span></span> <span data-ttu-id="d5359-108">Usare la variabile copiata nella query LINQ.</span><span class="sxs-lookup"><span data-stu-id="d5359-108">Use the copied variable in the LINQ query.</span></span> <span data-ttu-id="d5359-109">Di seguito è riportato un esempio:</span><span class="sxs-lookup"><span data-stu-id="d5359-109">The following is an example:</span></span>  
   
 ```vb  
 Sub RunQuery(ByVal collection As List(Of Integer), _  
@@ -32,12 +32,12 @@ Sub RunQuery(ByVal collection As List(Of Integer), _
 End Sub  
 ```  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="647b4-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="647b4-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d5359-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d5359-110">To correct this error</span></span>  
   
-1. <span data-ttu-id="647b4-111">Sostituire la parola chiave `ByRef` con la parola chiave `ByVal` per il parametro usato nella query.</span><span class="sxs-lookup"><span data-stu-id="647b4-111">Replace the `ByRef` keyword with the `ByVal` keyword for the parameter used in the query.</span></span>  
+1. <span data-ttu-id="d5359-111">Sostituire la parola chiave `ByRef` con la parola chiave `ByVal` per il parametro usato nella query.</span><span class="sxs-lookup"><span data-stu-id="d5359-111">Replace the `ByRef` keyword with the `ByVal` keyword for the parameter used in the query.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="647b4-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="647b4-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d5359-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d5359-112">See also</span></span>
 
-- [<span data-ttu-id="647b4-113">Differenze tra il passaggio di un argomento per valore e per riferimento</span><span class="sxs-lookup"><span data-stu-id="647b4-113">Differences Between Passing an Argument By Value and By Reference</span></span>](../../visual-basic/programming-guide/language-features/procedures/differences-between-passing-an-argument-by-value-and-by-reference.md)
-- [<span data-ttu-id="647b4-114">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="647b4-114">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [<span data-ttu-id="647b4-115">LINQ</span><span class="sxs-lookup"><span data-stu-id="647b4-115">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [<span data-ttu-id="d5359-113">Differenze tra il passaggio di un argomento per valore e per riferimento</span><span class="sxs-lookup"><span data-stu-id="d5359-113">Differences Between Passing an Argument By Value and By Reference</span></span>](../programming-guide/language-features/procedures/differences-between-passing-an-argument-by-value-and-by-reference.md)
+- [<span data-ttu-id="d5359-114">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="d5359-114">Introduction to LINQ in Visual Basic</span></span>](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [<span data-ttu-id="d5359-115">LINQ</span><span class="sxs-lookup"><span data-stu-id="d5359-115">LINQ</span></span>](../programming-guide/language-features/linq/index.md)
