--- a/docs/visual-basic/misc/bc36535.md
+++ b/docs/visual-basic/misc/bc36535.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC36535
 ms.assetid: afb5281b-70a7-48c7-a46d-39522b96b1ff
-ms.openlocfilehash: 4cb0080dc28799dbaab508aade3b44f0d925bda6
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 2e9960d934834e8ccadff39cfebacb8fdd8859cb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69666887"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378913"
 ---
-# <a name="instance-members-and-me-cannot-be-used-in-a-query-expression"></a><span data-ttu-id="1bc7b-102">Non è possibile usare membri di istanza e 'Me' in un'espressione di query</span><span class="sxs-lookup"><span data-stu-id="1bc7b-102">Instance members and 'Me' cannot be used in a query expression</span></span>
-<span data-ttu-id="1bc7b-103">Una query LINQ in una `Structure` include un riferimento a `Me` o a un membro di istanza della struttura.</span><span class="sxs-lookup"><span data-stu-id="1bc7b-103">A LINQ query in a `Structure` includes a reference to `Me` or to an instance member of the structure.</span></span> <span data-ttu-id="1bc7b-104">I riferimenti a `Me` o i membri di istanza non sono consentiti nelle espressioni di query all'interno di una `Structure`.</span><span class="sxs-lookup"><span data-stu-id="1bc7b-104">References to `Me` or instance members are not allowed in query expressions within a `Structure`.</span></span>  
+# <a name="instance-members-and-me-cannot-be-used-in-a-query-expression"></a><span data-ttu-id="70a1d-102">Non è possibile usare membri di istanza e 'Me' in un'espressione di query</span><span class="sxs-lookup"><span data-stu-id="70a1d-102">Instance members and 'Me' cannot be used in a query expression</span></span>
+<span data-ttu-id="70a1d-103">Una query LINQ in una `Structure` include un riferimento a `Me` o a un membro di istanza della struttura.</span><span class="sxs-lookup"><span data-stu-id="70a1d-103">A LINQ query in a `Structure` includes a reference to `Me` or to an instance member of the structure.</span></span> <span data-ttu-id="70a1d-104">I riferimenti a `Me` o i membri di istanza non sono consentiti nelle espressioni di query all'interno di una `Structure`.</span><span class="sxs-lookup"><span data-stu-id="70a1d-104">References to `Me` or instance members are not allowed in query expressions within a `Structure`.</span></span>  
   
- <span data-ttu-id="1bc7b-105">**ID errore:** BC36535</span><span class="sxs-lookup"><span data-stu-id="1bc7b-105">**Error ID:** BC36535</span></span>  
+ <span data-ttu-id="70a1d-105">**ID errore:** BC36535</span><span class="sxs-lookup"><span data-stu-id="70a1d-105">**Error ID:** BC36535</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1bc7b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1bc7b-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="70a1d-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="70a1d-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="1bc7b-107">Creare una copia del membro di istanza o il valore restituito dal riferimento a `Me` e usare la copia nell'espressione di query, come mostrato nell'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="1bc7b-107">Create a copy of the instance member or the value returned by the reference to `Me` and use the copy in the query expression, as shown in the following example.</span></span>  
+1. <span data-ttu-id="70a1d-107">Creare una copia del membro di istanza o il valore restituito dal riferimento a `Me` e usare la copia nell'espressione di query, come mostrato nell'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="70a1d-107">Create a copy of the instance member or the value returned by the reference to `Me` and use the copy in the query expression, as shown in the following example.</span></span>  
   
 ```vb  
 Structure SampleStructure  
@@ -40,9 +40,9 @@ Structure SampleStructure
 End Structure  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="1bc7b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1bc7b-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="70a1d-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="70a1d-108">See also</span></span>
 
-- [<span data-ttu-id="1bc7b-109">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="1bc7b-109">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [<span data-ttu-id="1bc7b-110">LINQ</span><span class="sxs-lookup"><span data-stu-id="1bc7b-110">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
-- [<span data-ttu-id="1bc7b-111">Me</span><span class="sxs-lookup"><span data-stu-id="1bc7b-111">Me</span></span>](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
-- [<span data-ttu-id="1bc7b-112">Structure (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="1bc7b-112">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="70a1d-109">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="70a1d-109">Introduction to LINQ in Visual Basic</span></span>](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [<span data-ttu-id="70a1d-110">LINQ</span><span class="sxs-lookup"><span data-stu-id="70a1d-110">LINQ</span></span>](../programming-guide/language-features/linq/index.md)
+- [<span data-ttu-id="70a1d-111">Me stesso</span><span class="sxs-lookup"><span data-stu-id="70a1d-111">Me</span></span>](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
+- [<span data-ttu-id="70a1d-112">Structure (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="70a1d-112">Structure (Visual Basic)</span></span>](../language-reference/statements/structure-statement.md)
