--- a/docs/visual-basic/misc/bc36551.md
+++ b/docs/visual-basic/misc/bc36551.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC36551
 ms.assetid: c832d523-5bf6-4baf-b91c-bd26d94453ed
-ms.openlocfilehash: 91847d40bfd44c79331ef0a9a29ee4ad8c50f7b9
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: d9a214ae82ccb0585b7cd14404e091211df45402
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71353577"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378549"
 ---
-# <a name="extension-methods-can-be-defined-only-in-modules"></a><span data-ttu-id="66212-102">I metodi di estensione possono essere definiti solo nei moduli</span><span class="sxs-lookup"><span data-stu-id="66212-102">Extension methods can be defined only in modules</span></span>
-<span data-ttu-id="66212-103">Questo errore si verifica quando un metodo di estensione è stato definito all'esterno di un modulo.</span><span class="sxs-lookup"><span data-stu-id="66212-103">This error occurs when an extension method has been defined outside a module.</span></span> <span data-ttu-id="66212-104">In Visual Basic, tutti i metodi di estensione devono essere definiti all'interno di moduli standard.</span><span class="sxs-lookup"><span data-stu-id="66212-104">In Visual Basic, all extension methods must be defined within standard modules.</span></span>  
+# <a name="extension-methods-can-be-defined-only-in-modules"></a><span data-ttu-id="f7b5a-102">I metodi di estensione possono essere definiti solo nei moduli</span><span class="sxs-lookup"><span data-stu-id="f7b5a-102">Extension methods can be defined only in modules</span></span>
+<span data-ttu-id="f7b5a-103">Questo errore si verifica quando un metodo di estensione è stato definito all'esterno di un modulo.</span><span class="sxs-lookup"><span data-stu-id="f7b5a-103">This error occurs when an extension method has been defined outside a module.</span></span> <span data-ttu-id="f7b5a-104">In Visual Basic, tutti i metodi di estensione devono essere definiti all'interno di moduli standard.</span><span class="sxs-lookup"><span data-stu-id="f7b5a-104">In Visual Basic, all extension methods must be defined within standard modules.</span></span>  
   
- <span data-ttu-id="66212-105">**ID errore:** BC36551</span><span class="sxs-lookup"><span data-stu-id="66212-105">**Error ID:** BC36551</span></span>  
+ <span data-ttu-id="f7b5a-105">**ID errore:** BC36551</span><span class="sxs-lookup"><span data-stu-id="f7b5a-105">**Error ID:** BC36551</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="66212-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="66212-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f7b5a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f7b5a-106">To correct this error</span></span>  
   
-- <span data-ttu-id="66212-107">Inserire il metodo di estensione in un modulo.</span><span class="sxs-lookup"><span data-stu-id="66212-107">Place the extension method in a module.</span></span>  
+- <span data-ttu-id="f7b5a-107">Inserire il metodo di estensione in un modulo.</span><span class="sxs-lookup"><span data-stu-id="f7b5a-107">Place the extension method in a module.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="66212-108">Esempio</span><span class="sxs-lookup"><span data-stu-id="66212-108">Example</span></span>  
- <span data-ttu-id="66212-109">L'esempio seguente estende la classe `String` aggiungendo un metodo `Print` .</span><span class="sxs-lookup"><span data-stu-id="66212-109">The following example extends the `String` class, adding a `Print` method.</span></span>  
+## <a name="example"></a><span data-ttu-id="f7b5a-108">Esempio</span><span class="sxs-lookup"><span data-stu-id="f7b5a-108">Example</span></span>  
+ <span data-ttu-id="f7b5a-109">L'esempio seguente estende la classe `String` aggiungendo un metodo `Print` .</span><span class="sxs-lookup"><span data-stu-id="f7b5a-109">The following example extends the `String` class, adding a `Print` method.</span></span>  
   
 ```vb  
 Imports StringUtility  
@@ -40,8 +40,8 @@ Namespace StringUtility
 End Namespace  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="66212-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="66212-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f7b5a-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f7b5a-110">See also</span></span>
 
-- [<span data-ttu-id="66212-111">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="66212-111">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="66212-112">Modulo \<parola chiave></span><span class="sxs-lookup"><span data-stu-id="66212-112">Module \<keyword></span></span>](../../visual-basic/language-reference/modifiers/module-keyword.md)
-- [<span data-ttu-id="66212-113">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="66212-113">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+- [<span data-ttu-id="f7b5a-111">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="f7b5a-111">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="f7b5a-112">Modulo\<keyword></span><span class="sxs-lookup"><span data-stu-id="f7b5a-112">Module \<keyword></span></span>](../language-reference/modifiers/module-keyword.md)
+- [<span data-ttu-id="f7b5a-113">Istruzione Module</span><span class="sxs-lookup"><span data-stu-id="f7b5a-113">Module Statement</span></span>](../language-reference/statements/module-statement.md)
