--- a/docs/visual-basic/misc/bc36552.md
+++ b/docs/visual-basic/misc/bc36552.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC36552
 ms.assetid: a8cc8cdd-cdb5-42ca-b5a1-c9a71abd46eb
-ms.openlocfilehash: 96b57f30368ccc7eb78c3be5fd108c97bda5affb
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: a5a6ab0292a40f51ac4dd092f3c8ed8dbc9abcab
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71353536"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378471"
 ---
-# <a name="extension-methods-must-declare-at-least-one-parameter"></a><span data-ttu-id="1fe07-102">I metodi di estensione devono dichiarare almeno un parametro</span><span class="sxs-lookup"><span data-stu-id="1fe07-102">Extension methods must declare at least one parameter</span></span>
-<span data-ttu-id="1fe07-103">I metodi di estensione devono dichiarare almeno un parametro.</span><span class="sxs-lookup"><span data-stu-id="1fe07-103">Extension methods must declare at least one parameter.</span></span> <span data-ttu-id="1fe07-104">Il primo parametro specifica il tipo da estendere.</span><span class="sxs-lookup"><span data-stu-id="1fe07-104">The first parameter specifies which type to extend.</span></span>  
+# <a name="extension-methods-must-declare-at-least-one-parameter"></a><span data-ttu-id="8435c-102">I metodi di estensione devono dichiarare almeno un parametro</span><span class="sxs-lookup"><span data-stu-id="8435c-102">Extension methods must declare at least one parameter</span></span>
+<span data-ttu-id="8435c-103">I metodi di estensione devono dichiarare almeno un parametro.</span><span class="sxs-lookup"><span data-stu-id="8435c-103">Extension methods must declare at least one parameter.</span></span> <span data-ttu-id="8435c-104">Il primo parametro specifica il tipo da estendere.</span><span class="sxs-lookup"><span data-stu-id="8435c-104">The first parameter specifies which type to extend.</span></span>  
   
- <span data-ttu-id="1fe07-105">Un metodo di estensione senza parametri non è valido perché il primo parametro specifica quale tipo di dati viene esteso dal metodo.</span><span class="sxs-lookup"><span data-stu-id="1fe07-105">An extension method without parameters is not valid because the first parameter specifies which data type the method extends.</span></span> <span data-ttu-id="1fe07-106">Il primo parametro viene associato all'istanza del tipo di dati che richiama il metodo.</span><span class="sxs-lookup"><span data-stu-id="1fe07-106">The first parameter is bound to the instance of the data type that invokes the method.</span></span>  
+ <span data-ttu-id="8435c-105">Un metodo di estensione senza parametri non è valido perché il primo parametro specifica quale tipo di dati viene esteso dal metodo.</span><span class="sxs-lookup"><span data-stu-id="8435c-105">An extension method without parameters is not valid because the first parameter specifies which data type the method extends.</span></span> <span data-ttu-id="8435c-106">Il primo parametro viene associato all'istanza del tipo di dati che richiama il metodo.</span><span class="sxs-lookup"><span data-stu-id="8435c-106">The first parameter is bound to the instance of the data type that invokes the method.</span></span>  
   
- <span data-ttu-id="1fe07-107">**ID errore:** BC36552</span><span class="sxs-lookup"><span data-stu-id="1fe07-107">**Error ID:** BC36552</span></span>  
+ <span data-ttu-id="8435c-107">**ID errore:** BC36552</span><span class="sxs-lookup"><span data-stu-id="8435c-107">**Error ID:** BC36552</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1fe07-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1fe07-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8435c-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8435c-108">To correct this error</span></span>  
   
-- <span data-ttu-id="1fe07-109">Aggiungere un parametro del tipo che il metodo estende.</span><span class="sxs-lookup"><span data-stu-id="1fe07-109">Add a parameter of the type that your method extends.</span></span>  
+- <span data-ttu-id="8435c-109">Aggiungere un parametro del tipo che il metodo estende.</span><span class="sxs-lookup"><span data-stu-id="8435c-109">Add a parameter of the type that your method extends.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="1fe07-110">Esempio</span><span class="sxs-lookup"><span data-stu-id="1fe07-110">Example</span></span>  
- <span data-ttu-id="1fe07-111">Il primo parametro nell'esempio seguente indica che il metodo `Print` estende il tipo di dati `String` .</span><span class="sxs-lookup"><span data-stu-id="1fe07-111">The first parameter in the following example indicates that the `Print` method extends the `String` data type.</span></span>  
+## <a name="example"></a><span data-ttu-id="8435c-110">Esempio</span><span class="sxs-lookup"><span data-stu-id="8435c-110">Example</span></span>  
+ <span data-ttu-id="8435c-111">Il primo parametro nell'esempio seguente indica che il metodo `Print` estende il tipo di dati `String` .</span><span class="sxs-lookup"><span data-stu-id="8435c-111">The first parameter in the following example indicates that the `Print` method extends the `String` data type.</span></span>  
   
 ```vb  
 <Extension()> _  
@@ -35,15 +35,15 @@ Public Sub Print (ByVal str As String)
 End Sub  
 ```  
   
- <span data-ttu-id="1fe07-112">Quando il metodo di estensione viene chiamato nel modo seguente, il parametro `str` nel metodo viene associato a `greeting`, l'istanza di `String` che chiama `Print`.</span><span class="sxs-lookup"><span data-stu-id="1fe07-112">When the extension method is called as follows, parameter `str` in the method is bound to `greeting`, the instance of `String` that calls `Print`.</span></span> <span data-ttu-id="1fe07-113">Il compilatore userà `greeting` come argomento al metodo di estensione `Print`.</span><span class="sxs-lookup"><span data-stu-id="1fe07-113">The compiler will use `greeting` as the argument to extension method `Print`.</span></span>  
+ <span data-ttu-id="8435c-112">Quando il metodo di estensione viene chiamato nel modo seguente, il parametro `str` nel metodo viene associato a `greeting`, l'istanza di `String` che chiama `Print`.</span><span class="sxs-lookup"><span data-stu-id="8435c-112">When the extension method is called as follows, parameter `str` in the method is bound to `greeting`, the instance of `String` that calls `Print`.</span></span> <span data-ttu-id="8435c-113">Il compilatore userà `greeting` come argomento al metodo di estensione `Print`.</span><span class="sxs-lookup"><span data-stu-id="8435c-113">The compiler will use `greeting` as the argument to extension method `Print`.</span></span>  
   
 ```vb  
 Dim greeting As String = "Hello"  
 greeting.Print()  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="1fe07-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1fe07-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8435c-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8435c-114">See also</span></span>
 
-- [<span data-ttu-id="1fe07-115">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="1fe07-115">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="1fe07-116">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="1fe07-116">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
-- [<span data-ttu-id="1fe07-117">Routine</span><span class="sxs-lookup"><span data-stu-id="1fe07-117">Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/index.md)
+- [<span data-ttu-id="8435c-115">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="8435c-115">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="8435c-116">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="8435c-116">Procedure Parameters and Arguments</span></span>](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [<span data-ttu-id="8435c-117">Procedure</span><span class="sxs-lookup"><span data-stu-id="8435c-117">Procedures</span></span>](../programming-guide/language-features/procedures/index.md)
