--- a/docs/visual-basic/misc/bc36561.md
+++ b/docs/visual-basic/misc/bc36561.md
@@ -1,5 +1,5 @@
 ---
-title: Il metodo di estensione ' <methodname>' presenta vincoli di tipo che non possono mai essere soddisfatti
+title: I vincoli di tipo del metodo di estensione '<methodname>' non possono mai essere soddisfatti
 ms.date: 07/20/2015
 f1_keywords:
 - bc36561
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36561
 ms.assetid: ff42d6e9-611b-407d-a269-f268b36ed277
-ms.openlocfilehash: d98203f6fa1a6f9ac6d05c7cba7586f3fdf5ebde
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 0c7964f96850f755032add91be83b85fd9c0bf6d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71396414"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378211"
 ---
-# <a name="extension-method-methodname-has-type-constraints-that-can-never-be-satisfied"></a><span data-ttu-id="3b8f7-102">Il metodo di estensione ' \<methodname >' presenta vincoli di tipo che non possono mai essere soddisfatti</span><span class="sxs-lookup"><span data-stu-id="3b8f7-102">Extension method '\<methodname>' has type constraints that can never be satisfied</span></span>
-<span data-ttu-id="3b8f7-103">I parametri di tipo di questo metodo interagiscono in modo da impedire che vengano soddisfatti.</span><span class="sxs-lookup"><span data-stu-id="3b8f7-103">The type parameters of this method interact in a way that prevents them from ever being satisfied.</span></span> <span data-ttu-id="3b8f7-104">Di seguito viene riportato un esempio di metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="3b8f7-104">The following extension method is an example.</span></span>  
+# <a name="extension-method-methodname-has-type-constraints-that-can-never-be-satisfied"></a><span data-ttu-id="7a5e1-102">I vincoli di tipo del metodo di estensione '\<methodname>' non possono mai essere soddisfatti</span><span class="sxs-lookup"><span data-stu-id="7a5e1-102">Extension method '\<methodname>' has type constraints that can never be satisfied</span></span>
+<span data-ttu-id="7a5e1-103">I parametri di tipo di questo metodo interagiscono in modo da impedire che vengano soddisfatti.</span><span class="sxs-lookup"><span data-stu-id="7a5e1-103">The type parameters of this method interact in a way that prevents them from ever being satisfied.</span></span> <span data-ttu-id="7a5e1-104">Di seguito viene riportato un esempio di metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="7a5e1-104">The following extension method is an example.</span></span>  
   
 ```vb  
 '' Not valid.  
@@ -24,23 +24,23 @@ ms.locfileid: "71396414"
 'End Sub  
 ```  
   
- <span data-ttu-id="3b8f7-105">Poiché il metodo è un metodo di estensione, il compilatore deve poter determinare il tipo o i tipi di dati che il metodo estende solo in base al primo parametro della dichiarazione del metodo, `para1`, e all'argomento inviato per tale parametro.</span><span class="sxs-lookup"><span data-stu-id="3b8f7-105">Because the method is an extension method, the compiler must be able to determine the data type or types that the method extends based only on the first parameter in the method declaration, `para1`, and the argument sent in for that parameter.</span></span> <span data-ttu-id="3b8f7-106">Quando il primo parametro fa riferimento a parametri di tipo generici, `para1 as T`, i vincoli sui parametri generici limitano il set di tipi a cui il metodo si applica.</span><span class="sxs-lookup"><span data-stu-id="3b8f7-106">When the first parameter refers to generic type parameters, `para1 as T`, the constraints on the generic parameters restrict the set of types to which the method applies.</span></span>  
+ <span data-ttu-id="7a5e1-105">Poiché il metodo è un metodo di estensione, il compilatore deve poter determinare il tipo o i tipi di dati che il metodo estende solo in base al primo parametro della dichiarazione del metodo, `para1`, e all'argomento inviato per tale parametro.</span><span class="sxs-lookup"><span data-stu-id="7a5e1-105">Because the method is an extension method, the compiler must be able to determine the data type or types that the method extends based only on the first parameter in the method declaration, `para1`, and the argument sent in for that parameter.</span></span> <span data-ttu-id="7a5e1-106">Quando il primo parametro fa riferimento a parametri di tipo generici, `para1 as T`, i vincoli sui parametri generici limitano il set di tipi a cui il metodo si applica.</span><span class="sxs-lookup"><span data-stu-id="7a5e1-106">When the first parameter refers to generic type parameters, `para1 as T`, the constraints on the generic parameters restrict the set of types to which the method applies.</span></span>  
   
- <span data-ttu-id="3b8f7-107">L'applicabilità di un metodo di estensione è determinata dall'argomento fornito per il primo parametro, che nel codice seguente è `arg1` .</span><span class="sxs-lookup"><span data-stu-id="3b8f7-107">Applicability of an extension method is determined from the argument provided for the first parameter, which is `arg1` in the following code.</span></span>  
+ <span data-ttu-id="7a5e1-107">L'applicabilità di un metodo di estensione è determinata dall'argomento fornito per il primo parametro, che nel codice seguente è `arg1` .</span><span class="sxs-lookup"><span data-stu-id="7a5e1-107">Applicability of an extension method is determined from the argument provided for the first parameter, which is `arg1` in the following code.</span></span>  
   
  `'' Not valid.`  
   
  `'arg1.extensionExample(arg2)`  
   
- <span data-ttu-id="3b8f7-108">Deve essere possibile verificare i vincoli su tutti i parametri di tipo generici a cui fa riferimento il primo parametro, `para1`, analizzando solo il primo argomento, `arg1`.</span><span class="sxs-lookup"><span data-stu-id="3b8f7-108">It must be possible to verify the constraints on all generic type parameters referred to by the first parameter, `para1`, by looking at only the first argument, `arg1`.</span></span> <span data-ttu-id="3b8f7-109">In `extensionExample`non è possibile determinare il set di tipi che si stanno estendendo solo dal primo parametro.</span><span class="sxs-lookup"><span data-stu-id="3b8f7-109">In `extensionExample`, the set of types that is being extended cannot be determined from the first parameter alone.</span></span> <span data-ttu-id="3b8f7-110">Il parametro di tipo `T` è vincolato dal parametro di tipo `U`, a cui `para1` non fa riferimento, e non può essere dedotto da `arg1`.</span><span class="sxs-lookup"><span data-stu-id="3b8f7-110">Type parameter `T` is constrained by type parameter `U`, which is not referenced by `para1` and cannot be inferred from `arg1`.</span></span> <span data-ttu-id="3b8f7-111">L'applicabilità del metodo a qualsiasi possibile tipo non può pertanto essere verificata e il metodo non potrà mai essere chiamato.</span><span class="sxs-lookup"><span data-stu-id="3b8f7-111">Therefore, the applicability of the method to any possible type cannot be verified, and the method can never be called.</span></span>  
+ <span data-ttu-id="7a5e1-108">Deve essere possibile verificare i vincoli su tutti i parametri di tipo generici a cui fa riferimento il primo parametro, `para1`, analizzando solo il primo argomento, `arg1`.</span><span class="sxs-lookup"><span data-stu-id="7a5e1-108">It must be possible to verify the constraints on all generic type parameters referred to by the first parameter, `para1`, by looking at only the first argument, `arg1`.</span></span> <span data-ttu-id="7a5e1-109">In `extensionExample`non è possibile determinare il set di tipi che si stanno estendendo solo dal primo parametro.</span><span class="sxs-lookup"><span data-stu-id="7a5e1-109">In `extensionExample`, the set of types that is being extended cannot be determined from the first parameter alone.</span></span> <span data-ttu-id="7a5e1-110">Il parametro di tipo `T` è vincolato dal parametro di tipo `U`, a cui `para1` non fa riferimento, e non può essere dedotto da `arg1`.</span><span class="sxs-lookup"><span data-stu-id="7a5e1-110">Type parameter `T` is constrained by type parameter `U`, which is not referenced by `para1` and cannot be inferred from `arg1`.</span></span> <span data-ttu-id="7a5e1-111">L'applicabilità del metodo a qualsiasi possibile tipo non può pertanto essere verificata e il metodo non potrà mai essere chiamato.</span><span class="sxs-lookup"><span data-stu-id="7a5e1-111">Therefore, the applicability of the method to any possible type cannot be verified, and the method can never be called.</span></span>  
   
- <span data-ttu-id="3b8f7-112">**ID errore:** BC36561</span><span class="sxs-lookup"><span data-stu-id="3b8f7-112">**Error ID:** BC36561</span></span>  
+ <span data-ttu-id="7a5e1-112">**ID errore:** BC36561</span><span class="sxs-lookup"><span data-stu-id="7a5e1-112">**Error ID:** BC36561</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3b8f7-113">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3b8f7-113">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7a5e1-113">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7a5e1-113">To correct this error</span></span>  
   
-- <span data-ttu-id="3b8f7-114">Modificare la dichiarazione di tipo per rimuovere l'interdipendenza tra i tipi.</span><span class="sxs-lookup"><span data-stu-id="3b8f7-114">Change the type declaration to remove the interdependence between the types.</span></span>  
+- <span data-ttu-id="7a5e1-114">Modificare la dichiarazione di tipo per rimuovere l'interdipendenza tra i tipi.</span><span class="sxs-lookup"><span data-stu-id="7a5e1-114">Change the type declaration to remove the interdependence between the types.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3b8f7-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3b8f7-115">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7a5e1-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7a5e1-115">See also</span></span>
 
-- [<span data-ttu-id="3b8f7-116">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="3b8f7-116">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="3b8f7-117">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="3b8f7-117">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="7a5e1-116">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="7a5e1-116">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="7a5e1-117">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="7a5e1-117">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
