--- a/docs/visual-basic/misc/bc36567.md
+++ b/docs/visual-basic/misc/bc36567.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro '<parametername>' ha già un argomento corrispondente
+title: Il parametro '<parametername>' ha già un argomento corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36567
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC36567
 ms.assetid: f01fc8d8-924a-4492-add1-db06604edcbf
-ms.openlocfilehash: d409de2127d6a5d1c2d44791ae82ad7af007c8a4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ec6f4d708a9ccf533bb1e6cf44d1e2e5759a5f10
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64582741"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378068"
 ---
-# <a name="parameter-parametername-already-has-a-matching-argument"></a><span data-ttu-id="f11fe-102">Parametro '\<nomeparametro >' ha già un argomento corrispondente</span><span class="sxs-lookup"><span data-stu-id="f11fe-102">Parameter '\<parametername>' already has a matching argument</span></span>
-<span data-ttu-id="f11fe-103">Un argomento viene passato in base al nome più di una volta nella stessa chiamata di routine.</span><span class="sxs-lookup"><span data-stu-id="f11fe-103">An argument is passed by name more than one time in the same procedure call.</span></span>  
+# <a name="parameter-parametername-already-has-a-matching-argument"></a><span data-ttu-id="a37ad-102">Il parametro '\<parametername>' ha già un argomento corrispondente</span><span class="sxs-lookup"><span data-stu-id="a37ad-102">Parameter '\<parametername>' already has a matching argument</span></span>
+<span data-ttu-id="a37ad-103">Un argomento viene passato in base al nome più di una volta nella stessa chiamata di routine.</span><span class="sxs-lookup"><span data-stu-id="a37ad-103">An argument is passed by name more than one time in the same procedure call.</span></span>  
   
- <span data-ttu-id="f11fe-104">**ID errore:** BC36567</span><span class="sxs-lookup"><span data-stu-id="f11fe-104">**Error ID:** BC36567</span></span>  
+ <span data-ttu-id="a37ad-104">**ID errore:** BC36567</span><span class="sxs-lookup"><span data-stu-id="a37ad-104">**Error ID:** BC36567</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f11fe-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f11fe-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a37ad-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a37ad-105">To correct this error</span></span>  
   
-- <span data-ttu-id="f11fe-106">Controllare se uno dei nomi degli argomenti sia stato digitato in modo errato.</span><span class="sxs-lookup"><span data-stu-id="f11fe-106">Check to see whether one of the argument names is misspelled.</span></span>  
+- <span data-ttu-id="a37ad-106">Controllare se uno dei nomi degli argomenti sia stato digitato in modo errato.</span><span class="sxs-lookup"><span data-stu-id="a37ad-106">Check to see whether one of the argument names is misspelled.</span></span>  
   
-- <span data-ttu-id="f11fe-107">Rimuovere l'argomento duplicato dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="f11fe-107">Remove the duplicated argument from the argument list.</span></span>  
+- <span data-ttu-id="a37ad-107">Rimuovere l'argomento duplicato dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="a37ad-107">Remove the duplicated argument from the argument list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f11fe-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f11fe-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a37ad-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a37ad-108">See also</span></span>
 
-- [<span data-ttu-id="f11fe-109">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="f11fe-109">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [<span data-ttu-id="a37ad-109">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="a37ad-109">Passing Arguments by Position and by Name</span></span>](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
