--- a/docs/visual-basic/misc/bc36568.md
+++ b/docs/visual-basic/misc/bc36568.md
@@ -1,5 +1,5 @@
 ---
-title: "'<elementname>' non è un parametro di metodo"
+title: "' <elementname> ' non è un parametro di metodo"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36568
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC36568
 ms.assetid: 3b40142f-b66f-4788-b156-cb97dfed45ee
-ms.openlocfilehash: 3acc2db08e1b88bc283972381ddf892234e49681
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 65c5629c8bcae5ca1edf197b40f03f892eae7839
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621544"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378016"
 ---
-# <a name="elementname-is-not-a-method-parameter"></a><span data-ttu-id="84fa3-102">'\<NomeElemento >' non è un parametro di metodo</span><span class="sxs-lookup"><span data-stu-id="84fa3-102">'\<elementname>' is not a method parameter</span></span>
-<span data-ttu-id="84fa3-103">Una chiamata di routine fornisce un argomento aggiuntivo non definito dal metodo.</span><span class="sxs-lookup"><span data-stu-id="84fa3-103">A procedure call supplies an additional argument that is not defined by the method.</span></span>  
+# <a name="elementname-is-not-a-method-parameter"></a><span data-ttu-id="15ed8-102">' \<elementname> ' non è un parametro di metodo</span><span class="sxs-lookup"><span data-stu-id="15ed8-102">'\<elementname>' is not a method parameter</span></span>
+<span data-ttu-id="15ed8-103">Una chiamata di routine fornisce un argomento aggiuntivo non definito dal metodo.</span><span class="sxs-lookup"><span data-stu-id="15ed8-103">A procedure call supplies an additional argument that is not defined by the method.</span></span>  
   
- <span data-ttu-id="84fa3-104">**ID errore:** BC36568</span><span class="sxs-lookup"><span data-stu-id="84fa3-104">**Error ID:** BC36568</span></span>  
+ <span data-ttu-id="15ed8-104">**ID errore:** BC36568</span><span class="sxs-lookup"><span data-stu-id="15ed8-104">**Error ID:** BC36568</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="84fa3-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="84fa3-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="15ed8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="15ed8-105">To correct this error</span></span>  
   
-- <span data-ttu-id="84fa3-106">Rimuovere l'argomento superfluo dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="84fa3-106">Remove the superfluous argument from the argument list.</span></span>  
+- <span data-ttu-id="15ed8-106">Rimuovere l'argomento superfluo dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="15ed8-106">Remove the superfluous argument from the argument list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="84fa3-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="84fa3-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="15ed8-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="15ed8-107">See also</span></span>
 
-- [<span data-ttu-id="84fa3-108">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="84fa3-108">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [<span data-ttu-id="15ed8-108">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="15ed8-108">Procedure Parameters and Arguments</span></span>](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
