--- a/docs/visual-basic/misc/bc36569.md
+++ b/docs/visual-basic/misc/bc36569.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento non specificato per il parametro '<parametername>'
+title: Argomento non specificato per il parametro ' <parametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36569
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC36569
 ms.assetid: f37d5bcd-93c7-435f-ac51-978a87371316
-ms.openlocfilehash: 6bb9d0980feb7aa51b2da536d31bcf19af33ad6e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0b0d8876da3dbd8856e20d6143ad6512e9a36c6a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621516"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377978"
 ---
-# <a name="argument-not-specified-for-parameter-parametername"></a><span data-ttu-id="43dec-102">Argomento non specificato per il parametro '\<nomeparametro >'</span><span class="sxs-lookup"><span data-stu-id="43dec-102">Argument not specified for parameter '\<parametername>'</span></span>
-<span data-ttu-id="43dec-103">Non è stato fornito un argomento per un parametro obbligatorio.</span><span class="sxs-lookup"><span data-stu-id="43dec-103">An argument for a required parameter has not been supplied.</span></span>  
+# <a name="argument-not-specified-for-parameter-parametername"></a><span data-ttu-id="5b7a8-102">Argomento non specificato per il parametro ' \<parametername> '</span><span class="sxs-lookup"><span data-stu-id="5b7a8-102">Argument not specified for parameter '\<parametername>'</span></span>
+<span data-ttu-id="5b7a8-103">Non è stato fornito un argomento per un parametro obbligatorio.</span><span class="sxs-lookup"><span data-stu-id="5b7a8-103">An argument for a required parameter has not been supplied.</span></span>  
   
- <span data-ttu-id="43dec-104">**ID errore:** BC36569</span><span class="sxs-lookup"><span data-stu-id="43dec-104">**Error ID:** BC36569</span></span>  
+ <span data-ttu-id="5b7a8-104">**ID errore:** BC36569</span><span class="sxs-lookup"><span data-stu-id="5b7a8-104">**Error ID:** BC36569</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="43dec-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="43dec-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5b7a8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5b7a8-105">To correct this error</span></span>  
   
-- <span data-ttu-id="43dec-106">Fornire un argomento per il parametro specificato.</span><span class="sxs-lookup"><span data-stu-id="43dec-106">Supply an argument for the specified parameter.</span></span>  
+- <span data-ttu-id="5b7a8-106">Fornire un argomento per il parametro specificato.</span><span class="sxs-lookup"><span data-stu-id="5b7a8-106">Supply an argument for the specified parameter.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="43dec-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="43dec-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="5b7a8-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5b7a8-107">See also</span></span>
 
-- [<span data-ttu-id="43dec-108">Risoluzione dei problemi relativi alle routine</span><span class="sxs-lookup"><span data-stu-id="43dec-108">Troubleshooting Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/troubleshooting-procedures.md)
+- [<span data-ttu-id="5b7a8-108">Risoluzione dei problemi relativi alle routine</span><span class="sxs-lookup"><span data-stu-id="5b7a8-108">Troubleshooting Procedures</span></span>](../programming-guide/language-features/procedures/troubleshooting-procedures.md)
