--- a/docs/visual-basic/misc/bc36580.md
+++ b/docs/visual-basic/misc/bc36580.md
@@ -1,5 +1,5 @@
 ---
-title: Metodo di estensione '<methodName>'definito '<typeName>'non ha la stessa firma del delegato'<delegateName>'
+title: Il metodo di estensione ' <methodName> ' definito in ' <typeName> ' non ha la stessa firma del delegato ' <delegateName> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36580
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36580
 ms.assetid: dc6b6a63-02b0-43d8-b6a7-c1cd397c6ee3
-ms.openlocfilehash: 2fa4f9ea944d062de315470f235cd6187c39a441
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ddf1854f3df06c02f5b1d28f67cb10105a8d8b73
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64623428"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377548"
 ---
-# <a name="extension-method-methodname-defined-in-typename-does-not-have-the-same-signature-as-delegate-delegatename"></a><span data-ttu-id="d0e94-102">Metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >' non ha la stessa firma del delegato '\<NomeDelegato >'</span><span class="sxs-lookup"><span data-stu-id="d0e94-102">Extension method '\<methodName>' defined in '\<typeName>' does not have the same signature as delegate '\<delegateName>'</span></span>
-<span data-ttu-id="d0e94-103">Le firme del metodo di estensione e il delegato che si sta provando a usare non corrispondono.</span><span class="sxs-lookup"><span data-stu-id="d0e94-103">There is a mismatch between the signatures of the extension method and the delegate that you are attempting to use.</span></span> <span data-ttu-id="d0e94-104">L'istruzione `Delegate` definisce i tipi di parametro e i tipi restituiti di una classe delegata.</span><span class="sxs-lookup"><span data-stu-id="d0e94-104">The `Delegate` statement defines the parameter types and return types of a delegate class.</span></span> <span data-ttu-id="d0e94-105">Qualsiasi routine con parametri, tipi e tipi restituiti corrispondenti può essere usata per creare un'istanza di questo tipo di delegato.</span><span class="sxs-lookup"><span data-stu-id="d0e94-105">Any procedure with matching parameters, types, and return types can be used to create an instance of this delegate type.</span></span> <span data-ttu-id="d0e94-106">Nell'esempio seguente viene segnalato questo errore perché la firma del metodo di estensione `Example` non è compatibile con la firma del delegato `Del`.</span><span class="sxs-lookup"><span data-stu-id="d0e94-106">This error is reported in the following example because the signature of extension method `Example` is not compatible with the signature of delegate `Del`.</span></span>  
+# <a name="extension-method-methodname-defined-in-typename-does-not-have-the-same-signature-as-delegate-delegatename"></a><span data-ttu-id="46c34-102">Il metodo di estensione ' \<methodName> ' definito in ' \<typeName> ' non ha la stessa firma del delegato ' \<delegateName> '</span><span class="sxs-lookup"><span data-stu-id="46c34-102">Extension method '\<methodName>' defined in '\<typeName>' does not have the same signature as delegate '\<delegateName>'</span></span>
+<span data-ttu-id="46c34-103">Le firme del metodo di estensione e il delegato che si sta provando a usare non corrispondono.</span><span class="sxs-lookup"><span data-stu-id="46c34-103">There is a mismatch between the signatures of the extension method and the delegate that you are attempting to use.</span></span> <span data-ttu-id="46c34-104">L'istruzione `Delegate` definisce i tipi di parametro e i tipi restituiti di una classe delegata.</span><span class="sxs-lookup"><span data-stu-id="46c34-104">The `Delegate` statement defines the parameter types and return types of a delegate class.</span></span> <span data-ttu-id="46c34-105">Qualsiasi routine con parametri, tipi e tipi restituiti corrispondenti può essere usata per creare un'istanza di questo tipo di delegato.</span><span class="sxs-lookup"><span data-stu-id="46c34-105">Any procedure with matching parameters, types, and return types can be used to create an instance of this delegate type.</span></span> <span data-ttu-id="46c34-106">Nell'esempio seguente viene segnalato questo errore perché la firma del metodo di estensione `Example` non è compatibile con la firma del delegato `Del`.</span><span class="sxs-lookup"><span data-stu-id="46c34-106">This error is reported in the following example because the signature of extension method `Example` is not compatible with the signature of delegate `Del`.</span></span>  
   
 ```vb  
 ' Definition of the delegate, with two parameters.  
@@ -35,18 +35,18 @@ End Sub
 ' Dim exampleDel As Del = AddressOf Example  
 ```  
   
- <span data-ttu-id="d0e94-107">**ID errore:** BC36580</span><span class="sxs-lookup"><span data-stu-id="d0e94-107">**Error ID:** BC36580</span></span>  
+ <span data-ttu-id="46c34-107">**ID errore:** BC36580</span><span class="sxs-lookup"><span data-stu-id="46c34-107">**Error ID:** BC36580</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d0e94-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d0e94-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="46c34-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="46c34-108">To correct this error</span></span>  
   
-- <span data-ttu-id="d0e94-109">Verificare che il delegato e il metodo di estensione abbiano lo stesso numero di parametri.</span><span class="sxs-lookup"><span data-stu-id="d0e94-109">Verify that the delegate and the extension method have the same number of parameters.</span></span>  
+- <span data-ttu-id="46c34-109">Verificare che il delegato e il metodo di estensione abbiano lo stesso numero di parametri.</span><span class="sxs-lookup"><span data-stu-id="46c34-109">Verify that the delegate and the extension method have the same number of parameters.</span></span>  
   
-- <span data-ttu-id="d0e94-110">Verificare che l'ordine dei parametri sia lo stesso nel delegato e nel metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="d0e94-110">Verify that the order of the parameters is the same in the delegate and the extension method.</span></span>  
+- <span data-ttu-id="46c34-110">Verificare che l'ordine dei parametri sia lo stesso nel delegato e nel metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="46c34-110">Verify that the order of the parameters is the same in the delegate and the extension method.</span></span>  
   
-- <span data-ttu-id="d0e94-111">Confrontare il tipo di dati di ogni parametro del delegato con il tipo di dati del parametro del metodo di estensione corrispondente per assicurarsi che siano compatibili.</span><span class="sxs-lookup"><span data-stu-id="d0e94-111">Compare the data type of each delegate parameter to the data type of the corresponding extension method parameter to make sure they are compatible.</span></span>  
+- <span data-ttu-id="46c34-111">Confrontare il tipo di dati di ogni parametro del delegato con il tipo di dati del parametro del metodo di estensione corrispondente per assicurarsi che siano compatibili.</span><span class="sxs-lookup"><span data-stu-id="46c34-111">Compare the data type of each delegate parameter to the data type of the corresponding extension method parameter to make sure they are compatible.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d0e94-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d0e94-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="46c34-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="46c34-112">See also</span></span>
 
-- [<span data-ttu-id="d0e94-113">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="d0e94-113">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="d0e94-114">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="d0e94-114">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [<span data-ttu-id="d0e94-115">Conversione di tipo relaxed del delegato</span><span class="sxs-lookup"><span data-stu-id="d0e94-115">Relaxed Delegate Conversion</span></span>](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
+- [<span data-ttu-id="46c34-113">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="46c34-113">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="46c34-114">Istruzione Delegate</span><span class="sxs-lookup"><span data-stu-id="46c34-114">Delegate Statement</span></span>](../language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="46c34-115">Conversione di tipo relaxed del delegato</span><span class="sxs-lookup"><span data-stu-id="46c34-115">Relaxed Delegate Conversion</span></span>](../programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
