--- a/docs/visual-basic/misc/bc36583.md
+++ b/docs/visual-basic/misc/bc36583.md
@@ -1,5 +1,5 @@
 ---
-title: Il parametro ' <parametername>' nel metodo di estensione ' <methodname>' definito in ' <typename>' ha già un argomento omesso corrispondente
+title: Il parametro '<parametername>' del metodo di estensione '<methodname>' definito in '<typename>' ha già un argomento omesso corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - bc36583
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36583
 ms.assetid: 662072fa-abb8-43c3-8ca2-aefb20f2e902
-ms.openlocfilehash: da1aceafd4be0546b23ed1daed2a139ef5287756
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 0b6fb2302e7e92387d346d81a68a3e97c264d828
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71396322"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377457"
 ---
-# <a name="parameter-parametername-in-extension-method-methodname-defined-in-typename-already-has-a-matching-omitted-argument"></a><span data-ttu-id="f6990-102">Il parametro ' \<parametername >' nel metodo di estensione ' \<methodname >' definito in ' \<typename >' ha già un argomento omesso corrispondente</span><span class="sxs-lookup"><span data-stu-id="f6990-102">Parameter '\<parametername>' in extension method '\<methodname>' defined in '\<typename>' already has a matching omitted argument</span></span>
-<span data-ttu-id="f6990-103">Una chiamata di routine a un metodo di estensione omette un argomento in base alla posizione e quindi specifica l'argomento per nome.</span><span class="sxs-lookup"><span data-stu-id="f6990-103">A procedure call to an extension method omits an argument by position and then supplies the argument by name.</span></span> <span data-ttu-id="f6990-104">Ad esempio, la seguente chiamata al metodo di estensione `ABC` prima omette un argomento per il parametro `Y`e quindi lo fornisce per nome.</span><span class="sxs-lookup"><span data-stu-id="f6990-104">For example, the following call to extension method `ABC` first omits an argument for parameter `Y`, and then supplies it by name.</span></span>  
+# <a name="parameter-parametername-in-extension-method-methodname-defined-in-typename-already-has-a-matching-omitted-argument"></a><span data-ttu-id="f11a1-102">Il parametro '\<parametername>' del metodo di estensione '\<methodname>' definito in '\<typename>' ha già un argomento omesso corrispondente</span><span class="sxs-lookup"><span data-stu-id="f11a1-102">Parameter '\<parametername>' in extension method '\<methodname>' defined in '\<typename>' already has a matching omitted argument</span></span>
+<span data-ttu-id="f11a1-103">Una chiamata di routine a un metodo di estensione omette un argomento in base alla posizione e quindi specifica l'argomento per nome.</span><span class="sxs-lookup"><span data-stu-id="f11a1-103">A procedure call to an extension method omits an argument by position and then supplies the argument by name.</span></span> <span data-ttu-id="f11a1-104">Ad esempio, la seguente chiamata al metodo di estensione `ABC` prima omette un argomento per il parametro `Y`e quindi lo fornisce per nome.</span><span class="sxs-lookup"><span data-stu-id="f11a1-104">For example, the following call to extension method `ABC` first omits an argument for parameter `Y`, and then supplies it by name.</span></span>  
   
 ```vb  
 <Extension()> _  
@@ -29,13 +29,13 @@ Dim number As Integer
 ' number.ABC(, 4, Y:=5)  
 ```  
   
- <span data-ttu-id="f6990-105">**ID errore:** BC36583</span><span class="sxs-lookup"><span data-stu-id="f6990-105">**Error ID:** BC36583</span></span>  
+ <span data-ttu-id="f11a1-105">**ID errore:** BC36583</span><span class="sxs-lookup"><span data-stu-id="f11a1-105">**Error ID:** BC36583</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f6990-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f6990-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f11a1-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="f11a1-106">To correct this error</span></span>  
   
-- <span data-ttu-id="f6990-107">Specificare l'argomento in base alla posizione oppure rimuovere la virgola che lo omette.</span><span class="sxs-lookup"><span data-stu-id="f6990-107">Supply the argument by position, or remove the comma that omits it.</span></span>  
+- <span data-ttu-id="f11a1-107">Specificare l'argomento in base alla posizione oppure rimuovere la virgola che lo omette.</span><span class="sxs-lookup"><span data-stu-id="f11a1-107">Supply the argument by position, or remove the comma that omits it.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="f6990-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f6990-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f11a1-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="f11a1-108">See also</span></span>
 
-- [<span data-ttu-id="f6990-109">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="f6990-109">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="f6990-110">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="f6990-110">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [<span data-ttu-id="f11a1-109">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="f11a1-109">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="f11a1-110">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="f11a1-110">Passing Arguments by Position and by Name</span></span>](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
