--- a/docs/visual-basic/misc/bc36807.md
+++ b/docs/visual-basic/misc/bc36807.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC36807
 ms.assetid: 01c19899-2b44-41e9-a99c-35edfa0deaf1
-ms.openlocfilehash: 2c357ee45015e2cb5ccbe3f0677982ac417f0b21
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d7de74b4a6ee0d056542c3f78e3ee5154ca8d339
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64647470"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369452"
 ---
-# <a name="xml-elements-cannot-be-selected-from-type-type"></a><span data-ttu-id="4511a-102">Non è possibile selezionare elementi XML dal tipo 'type'</span><span class="sxs-lookup"><span data-stu-id="4511a-102">XML elements cannot be selected from type 'type'</span></span>
-<span data-ttu-id="4511a-103">È stato fatto riferimento a un elemento figlio XML per un oggetto che non è di tipo <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`.</span><span class="sxs-lookup"><span data-stu-id="4511a-103">An XML child element has been referenced for an object that is not of type <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="4511a-104">Per altre informazioni, vedere [XML Child Axis Property](../../visual-basic/language-reference/xml-axis/xml-child-axis-property.md).</span><span class="sxs-lookup"><span data-stu-id="4511a-104">For more information, see [XML Child Axis Property](../../visual-basic/language-reference/xml-axis/xml-child-axis-property.md).</span></span>  
+# <a name="xml-elements-cannot-be-selected-from-type-type"></a><span data-ttu-id="6b733-102">Non è possibile selezionare elementi XML dal tipo 'type'</span><span class="sxs-lookup"><span data-stu-id="6b733-102">XML elements cannot be selected from type 'type'</span></span>
+<span data-ttu-id="6b733-103">È stato fatto riferimento a un elemento figlio XML per un oggetto che non è di tipo <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`.</span><span class="sxs-lookup"><span data-stu-id="6b733-103">An XML child element has been referenced for an object that is not of type <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="6b733-104">Per altre informazioni, vedere [XML Child Axis Property](../language-reference/xml-axis/xml-child-axis-property.md).</span><span class="sxs-lookup"><span data-stu-id="6b733-104">For more information, see [XML Child Axis Property](../language-reference/xml-axis/xml-child-axis-property.md).</span></span>  
   
 ```vb  
 ' Generates an error.  
 Dim var = "sample text".<child>  
 ```  
   
- <span data-ttu-id="4511a-105">**ID errore:** BC36807</span><span class="sxs-lookup"><span data-stu-id="4511a-105">**Error ID:** BC36807</span></span>  
+ <span data-ttu-id="6b733-105">**ID errore:** BC36807</span><span class="sxs-lookup"><span data-stu-id="6b733-105">**Error ID:** BC36807</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4511a-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4511a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6b733-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="6b733-106">To correct this error</span></span>  
   
-- <span data-ttu-id="4511a-107">Se si fa riferimento a un attributo di un oggetto, quest'ultimo deve essere fortemente tipizzato come <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`.</span><span class="sxs-lookup"><span data-stu-id="4511a-107">Ensure that the object of which you are referencing an attribute is strongly typed as <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="4511a-108">Di seguito è riportato un esempio:</span><span class="sxs-lookup"><span data-stu-id="4511a-108">Following is an example:</span></span>  
+- <span data-ttu-id="6b733-107">Se si fa riferimento a un attributo di un oggetto, quest'ultimo deve essere fortemente tipizzato come <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>o `IEnumerable(Of XElement)`.</span><span class="sxs-lookup"><span data-stu-id="6b733-107">Ensure that the object of which you are referencing an attribute is strongly typed as <xref:System.Xml.Linq.XElement>, <xref:System.Xml.Linq.XDocument>, or `IEnumerable(Of XElement)`.</span></span> <span data-ttu-id="6b733-108">Di seguito è illustrato un esempio:</span><span class="sxs-lookup"><span data-stu-id="6b733-108">Following is an example:</span></span>  
   
 ```vb  
 Dim elem As XElement = <root>  
@@ -35,8 +35,8 @@ Dim elem As XElement = <root>
 Dim var = elem.<child>  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="4511a-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4511a-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="6b733-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="6b733-109">See also</span></span>
 
-- [<span data-ttu-id="4511a-110">Proprietà Child Axis XML</span><span class="sxs-lookup"><span data-stu-id="4511a-110">XML Child Axis Property</span></span>](../../visual-basic/language-reference/xml-axis/xml-child-axis-property.md)
-- [<span data-ttu-id="4511a-111">Proprietà Axis XML</span><span class="sxs-lookup"><span data-stu-id="4511a-111">XML Axis Properties</span></span>](../../visual-basic/language-reference/xml-axis/index.md)
-- [<span data-ttu-id="4511a-112">XML</span><span class="sxs-lookup"><span data-stu-id="4511a-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="6b733-110">XML Child Axis Property</span><span class="sxs-lookup"><span data-stu-id="6b733-110">XML Child Axis Property</span></span>](../language-reference/xml-axis/xml-child-axis-property.md)
+- [<span data-ttu-id="6b733-111">Proprietà Axis XML</span><span class="sxs-lookup"><span data-stu-id="6b733-111">XML Axis Properties</span></span>](../language-reference/xml-axis/index.md)
+- [<span data-ttu-id="6b733-112">XML</span><span class="sxs-lookup"><span data-stu-id="6b733-112">XML</span></span>](../programming-guide/language-features/xml/index.md)
