--- a/docs/visual-basic/misc/bc36909.md
+++ b/docs/visual-basic/misc/bc36909.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile dedurre un tipo<variablename>di dati per '' perché le dimensioni della matrice non corrispondono
+title: Impossibile dedurre un tipo di dati per '<variablename>' perché le dimensioni di matrice non corrispondono
 ms.date: 07/20/2015
 f1_keywords:
 - bc36909
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36909
 ms.assetid: e41fec81-efec-4395-a0a5-d81906a2d4f1
-ms.openlocfilehash: be6604e8ce6288ff001ea8b925c6a31e00d26d7d
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 8b485c3ef5fa8cf8d4fe4f0b0b3dd61402dedfd6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660321"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369284"
 ---
-# <a name="cannot-infer-a-data-type-for-variablename-because-the-array-dimensions-do-not-match"></a><span data-ttu-id="8bc74-102">Non è possibile dedurre un tipo\<di dati per ' variablename >' perché le dimensioni della matrice non corrispondono</span><span class="sxs-lookup"><span data-stu-id="8bc74-102">Cannot infer a data type for '\<variablename>' because the array dimensions do not match</span></span>
-<span data-ttu-id="8bc74-103">Se le dimensioni usate per inizializzare una matrice non corrispondono alle dimensioni nella dichiarazione, il compilatore non può dedurre un tipo di dati per la matrice.</span><span class="sxs-lookup"><span data-stu-id="8bc74-103">If the dimensions used to initialize an array do not match the dimensions in the declaration, the compiler cannot infer a data type for the array.</span></span> <span data-ttu-id="8bc74-104">Il codice seguente, ad esempio, causa questo errore.</span><span class="sxs-lookup"><span data-stu-id="8bc74-104">For example, the following code causes this error.</span></span>  
+# <a name="cannot-infer-a-data-type-for-variablename-because-the-array-dimensions-do-not-match"></a><span data-ttu-id="78282-102">Impossibile dedurre un tipo di dati per '\<variablename>' perché le dimensioni di matrice non corrispondono</span><span class="sxs-lookup"><span data-stu-id="78282-102">Cannot infer a data type for '\<variablename>' because the array dimensions do not match</span></span>
+<span data-ttu-id="78282-103">Se le dimensioni usate per inizializzare una matrice non corrispondono alle dimensioni nella dichiarazione, il compilatore non può dedurre un tipo di dati per la matrice.</span><span class="sxs-lookup"><span data-stu-id="78282-103">If the dimensions used to initialize an array do not match the dimensions in the declaration, the compiler cannot infer a data type for the array.</span></span> <span data-ttu-id="78282-104">Il codice seguente, ad esempio, causa questo errore.</span><span class="sxs-lookup"><span data-stu-id="78282-104">For example, the following code causes this error.</span></span>  
   
 ```vb  
 ' Valid. exampleArray1 is a one-dimensional array of integers.  
@@ -25,9 +25,9 @@ Dim exampleArray1() = New Integer() {1, 2, 3}
 'Dim exampleArray3(,) = New Integer() {}  
 ```  
   
- <span data-ttu-id="8bc74-105">**ID errore:** BC36909</span><span class="sxs-lookup"><span data-stu-id="8bc74-105">**Error ID:** BC36909</span></span>  
+ <span data-ttu-id="78282-105">**ID errore:** BC36909</span><span class="sxs-lookup"><span data-stu-id="78282-105">**Error ID:** BC36909</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8bc74-106">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8bc74-106">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="78282-106">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="78282-106">See also</span></span>
 
-- [<span data-ttu-id="8bc74-107">Inferenza del tipo di variabile locale</span><span class="sxs-lookup"><span data-stu-id="8bc74-107">Local Type Inference</span></span>](../../visual-basic/programming-guide/language-features/variables/local-type-inference.md)
-- [<span data-ttu-id="8bc74-108">Dimensioni della matrice in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="8bc74-108">Array dimensions in Visual Basic</span></span>](../programming-guide/language-features/arrays/array-dimensions.md)
+- [<span data-ttu-id="78282-107">Inferenza del tipo di variabile locale</span><span class="sxs-lookup"><span data-stu-id="78282-107">Local Type Inference</span></span>](../programming-guide/language-features/variables/local-type-inference.md)
+- [<span data-ttu-id="78282-108">Dimensioni della matrice in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="78282-108">Array dimensions in Visual Basic</span></span>](../programming-guide/language-features/arrays/array-dimensions.md)
