--- a/docs/visual-basic/misc/bc40005.md
+++ b/docs/visual-basic/misc/bc40005.md
@@ -1,5 +1,5 @@
 ---
-title: <type>'<typename>' ombreggia un metodo sottoponibile a override nella classe di base
+title: <type>' <typename> ' ombreggia un metodo sottoponibile a override nella classe di base
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40005
@@ -7,33 +7,33 @@ f1_keywords:
 helpviewer_keywords:
 - BC40005
 ms.assetid: 1dadda7f-1d26-4ae8-a668-9f69d55ceb50
-ms.openlocfilehash: 553f241ddb6eb55ae1a3f82eaa8ef815f25f008b
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: df8c505860d774883f216f82e099c55b01fbffc9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660298"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369141"
 ---
-# <a name="type-typename-shadows-an-overridable-method-in-the-base-class"></a><span data-ttu-id="b452e-102">\<il tipo >\<' typeName >' ombreggia un metodo sottoponibile a override nella classe di base</span><span class="sxs-lookup"><span data-stu-id="b452e-102">\<type> '\<typename>' shadows an overridable method in the base class</span></span>
-<span data-ttu-id="b452e-103">\<il tipo >\<' typeName >' ombreggia un metodo sottoponibile a override nella classe di base.</span><span class="sxs-lookup"><span data-stu-id="b452e-103">\<type> '\<typename>' shadows an overridable method in the base class.</span></span> <span data-ttu-id="b452e-104">Per eseguire l'override del metodo di base, quest'ultimo deve essere dichiarato 'Overrides'.</span><span class="sxs-lookup"><span data-stu-id="b452e-104">If you want to override the base method, this method must be declared 'Overrides'.</span></span>  
+# <a name="type-typename-shadows-an-overridable-method-in-the-base-class"></a><span data-ttu-id="0cc52-102">\<type>' \<typename> ' ombreggia un metodo sottoponibile a override nella classe di base</span><span class="sxs-lookup"><span data-stu-id="0cc52-102">\<type> '\<typename>' shadows an overridable method in the base class</span></span>
+<span data-ttu-id="0cc52-103">\<type>' \<typename> ' nasconde un metodo sottoponibile a override nella classe di base.</span><span class="sxs-lookup"><span data-stu-id="0cc52-103">\<type> '\<typename>' shadows an overridable method in the base class.</span></span> <span data-ttu-id="0cc52-104">Per eseguire l'override del metodo di base, quest'ultimo deve essere dichiarato 'Overrides'.</span><span class="sxs-lookup"><span data-stu-id="0cc52-104">If you want to override the base method, this method must be declared 'Overrides'.</span></span>  
   
- <span data-ttu-id="b452e-105">Un elemento di programmazione è dichiarato con lo stesso nome di una proprietà o di una routine sottoponibile a override definita nella classe base.</span><span class="sxs-lookup"><span data-stu-id="b452e-105">A programming element is declared with the same name as an overridable procedure or property defined in the base class.</span></span> <span data-ttu-id="b452e-106">In questa situazione l'elemento in questa classe deve nascondere l'elemento della classe base.</span><span class="sxs-lookup"><span data-stu-id="b452e-106">In this situation, the element in this class should shadow the base class element.</span></span>  
+ <span data-ttu-id="0cc52-105">Un elemento di programmazione è dichiarato con lo stesso nome di una proprietà o di una routine sottoponibile a override definita nella classe base.</span><span class="sxs-lookup"><span data-stu-id="0cc52-105">A programming element is declared with the same name as an overridable procedure or property defined in the base class.</span></span> <span data-ttu-id="0cc52-106">In questa situazione l'elemento in questa classe deve nascondere l'elemento della classe base.</span><span class="sxs-lookup"><span data-stu-id="0cc52-106">In this situation, the element in this class should shadow the base class element.</span></span>  
   
- <span data-ttu-id="b452e-107">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="b452e-107">By default, this message is a warning.</span></span> <span data-ttu-id="b452e-108">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="b452e-108">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="0cc52-107">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="0cc52-107">By default, this message is a warning.</span></span> <span data-ttu-id="0cc52-108">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="0cc52-108">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="b452e-109">**ID errore:** BC40005</span><span class="sxs-lookup"><span data-stu-id="b452e-109">**Error ID:** BC40005</span></span>  
+ <span data-ttu-id="0cc52-109">**ID errore:** BC40005</span><span class="sxs-lookup"><span data-stu-id="0cc52-109">**Error ID:** BC40005</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b452e-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b452e-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0cc52-110">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0cc52-110">To correct this error</span></span>  
   
-- <span data-ttu-id="b452e-111">Se si intende sottoporre a override la routine di base, aggiungere la parola chiave `Overrides` alla dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="b452e-111">If you intend to override the base procedure, add the `Overrides` keyword to the declaration.</span></span>  
+- <span data-ttu-id="0cc52-111">Se si intende sottoporre a override la routine di base, aggiungere la parola chiave `Overrides` alla dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="0cc52-111">If you intend to override the base procedure, add the `Overrides` keyword to the declaration.</span></span>  
   
-- <span data-ttu-id="b452e-112">Se si intende nascondere la routine di base, aggiungere la parola chiave `Shadows` alla dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="b452e-112">If you intend to shadow the base procedure, add the `Shadows` keyword to the declaration.</span></span>  
+- <span data-ttu-id="0cc52-112">Se si intende nascondere la routine di base, aggiungere la parola chiave `Shadows` alla dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="0cc52-112">If you intend to shadow the base procedure, add the `Shadows` keyword to the declaration.</span></span>  
   
-- <span data-ttu-id="b452e-113">Se non si intende eseguire nessuna di queste operazioni, cambiare il nome dell'elemento che si intende dichiarare.</span><span class="sxs-lookup"><span data-stu-id="b452e-113">If you do not intend either overriding or shadowing, change the name of the element being declared.</span></span>  
+- <span data-ttu-id="0cc52-113">Se non si intende eseguire nessuna di queste operazioni, cambiare il nome dell'elemento che si intende dichiarare.</span><span class="sxs-lookup"><span data-stu-id="0cc52-113">If you do not intend either overriding or shadowing, change the name of the element being declared.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b452e-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b452e-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0cc52-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0cc52-114">See also</span></span>
 
-- [<span data-ttu-id="b452e-115">Override di proprietà e metodi nelle classi derivate</span><span class="sxs-lookup"><span data-stu-id="b452e-115">Overriding properties and methods in derived classes</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
-- [<span data-ttu-id="b452e-116">Shadowing in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b452e-116">Shadowing in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
-- [<span data-ttu-id="b452e-117">Overrides</span><span class="sxs-lookup"><span data-stu-id="b452e-117">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)
-- [<span data-ttu-id="b452e-118">Shadows</span><span class="sxs-lookup"><span data-stu-id="b452e-118">Shadows</span></span>](../../visual-basic/language-reference/modifiers/shadows.md)
+- [<span data-ttu-id="0cc52-115">Override di proprietà e metodi nelle classi derivate</span><span class="sxs-lookup"><span data-stu-id="0cc52-115">Overriding properties and methods in derived classes</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
+- [<span data-ttu-id="0cc52-116">Shadowing in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="0cc52-116">Shadowing in Visual Basic</span></span>](../programming-guide/language-features/declared-elements/shadowing.md)
+- [<span data-ttu-id="0cc52-117">Override</span><span class="sxs-lookup"><span data-stu-id="0cc52-117">Overrides</span></span>](../language-reference/modifiers/overrides.md)
+- [<span data-ttu-id="0cc52-118">Shadows</span><span class="sxs-lookup"><span data-stu-id="0cc52-118">Shadows</span></span>](../language-reference/modifiers/shadows.md)
